Fix invalid image path; update README.md, add sections

--- a/pages/1/2.md
+++ b/pages/1/2.md
@@ -21,7 +21,7 @@
 - At an operating system level, sectors are grouped together for efficiency, and
   are called logical units (a.k.a. allocation units)
 
-![](../../res/1/2.img-1.webp)
+![](../../images/1/2.img-1.webp)
 
 ## Solid State Storage Devices
 
@@ -40,7 +40,7 @@
 - At an operating system level, these pseudo sectors are grouped together for
   efficiency, and are called logical units (a.k.a. allocation units)
 
-![](../../res/1/2.img-2.webp)
+![](../../images/1/2.img-2.webp)
 
 ## Storage Devices
 
@@ -89,23 +89,20 @@
 - Created with only (1) partition
 - A single volume formatted with the exFAT file system
 
-```md
-# Type in -> list disk
+## Example
 
-# ...to see which storage devices the host computer system is aware of
+- Type in -> `list disk` to see which storage devices the host computer system
+  is aware of
+- Identify the disk (#) associated with your portable USB-powered storage device
+- Your disk (#) might not be the same as the one identified in the image
 
-# Identify the disk (#) associated with your portable USB-powered storage device
-
-# Your disk (#) might not be the same as the one identified in the image
-
+```console
 DISKPART> list disk
 
     Disk ###    Status              Size        Free        Dyn     Gpt
     --------    ----------------    ---------   ---------   -----   ------
     Disk 0      Online              476GB             0 B           *
     Disk 1      Online              465GB         1024 KB           *
-
-DISKPART>
 ```
 
 ## Storage Device Identification
@@ -130,76 +127,35 @@ DISKPART>
    - Document the disk (#) associated with that storage device
 8. Continue on with the next slide
 
-```md
-# Type in -> select disk <#>
+## Example
 
-# ...to change the context for all future (diskpart.exe) related commands you will type
+- Type in -> `select disk <#>` to change the context for all future
+  (diskpart.exe) related commands you will type
+- Future commands will then be executed directly against your portable
+  USB-powered storage device
 
-# Future commands will then be executed directly against your portable USB-powered storage device
-
-DISKPART> list disk
-
-    Disk ###    Status              Size        Free        Dyn     Gpt
-    --------    ----------------    ---------   ---------   -----   ------
-    Disk 0      Online              476GB             0 B           *
-    Disk 1      Online              465GB         1024 KB           *
-
+```console
 DISKPART> select disk 1
 
 Disk 1 is now the selected disk.
-
-DISKPART>
 ```
 
-```md
-# Type in -> clean
+- Type in -> `clean` to remove all existing partitions on your portable
+  USB-powered storage device
 
-# ...to remove all existing partitions on your portable USB-powered storage device
-
-DISKPART> list disk
-
-    Disk ###    Status              Size        Free        Dyn     Gpt
-    --------    ----------------    ---------   ---------   -----   ------
-    Disk 0      Online              476GB             0 B           *
-
-- Disk 1 Online 465GB 1024 KB *
-
-DISKPART> select disk 1
-
-Disk 1 is now the selected disk.
-
+```console
 DISKPART> clean
 
 DiskPart succeeded in cleaning the disk.
-
-DISKPART>
 ```
 
-```md
-# Type in -> list disk
+- Type in -> `list disk` to identify the "Free" space now available on your
+  portable USB-powered storage device
+- The "Free" value should now be equal to the "Size" (total capacity) value for
+  your portable USB-powered storage device
+- If so, then all partitions were successfully removed
 
-# ...to identify the "Free" space now available on your portable USB-powered storage device
-
-# The "Free" value should now be equal to the "Size" (total capacity) value for your portable USB-powered storage device
-
-# If so, then all partitions were successfully removed
-
-DISKPART> list disk
-
-    Disk ###    Status              Size        Free        Dyn     Gpt
-    --------    ----------------    ---------   ---------   -----   ------
-    Disk 0      Online              476GB             0 B           *
-
-- Disk 1 Online 465GB 1024 KB *
-
-DISKPART> select disk 1
-
-Disk 1 is now the selected disk.
-
-DISKPART> clean
-
-DiskPart succeeded in cleaning the disk.
-
+```console
 DISKPART> list disk
 
     Disk ###    Status              Size        Free        Dyn     Gpt
@@ -207,39 +163,11 @@ DISKPART> list disk
     Disk 0      Online              476GB             0 B           *
 
 - Disk 1 Online 465GB 465 GB *
-
-DISKPART>
 ```
 
-```md
-# Type in -> exit
+- Type in -> `exit` to gracefully close the (diskpart.exe) application
 
-# ...to gracefully close the (diskpart.exe) application
-
-DISKPART> list disk
-
-    Disk ###    Status              Size        Free        Dyn     Gpt
-    --------    ----------------    ---------   ---------   -----   ------
-    Disk 0      Online              476GB             0 B           *
-
-- Disk 1 Online 465GB 1024 KB *
-
-DISKPART> select disk 1
-
-Disk 1 is now the selected disk.
-
-DISKPART> clean
-
-DiskPart succeeded in cleaning the disk.
-
-DISKPART> list disk
-
-    Disk ###    Status              Size        Free        Dyn     Gpt
-    --------    ----------------    ---------   ---------   -----   ------
-    Disk 0      Online              476GB             0 B           *
-
-- Disk 1 Online 465GB 465 GB *
-
+```console
 DISKPART> exit
 ```
 
@@ -250,7 +178,7 @@ DISKPART> exit
   connected to the host computer system, and needs you to identify a
   partitioning scheme that will be used to manage new partitions created on it
 
-![](../../res/1/2.img-3.webp)
+![](../../images/1/2.img-3.webp)
 
 - Make sure you select the "GPT (GUID Partition Table)" option
 
@@ -275,18 +203,18 @@ DISKPART> exit
   you to create a new single exFAT formatted volume on your portable USB-powered
   storage device
 
-![](../../res/1/2.img-4.webp)
+![](../../images/1/2.img-4.webp)
 
 - When the wizard starts, click on the "Next" button
 
-![](../../res/1/2.img-5.webp)
+![](../../images/1/2.img-5.webp)
 
 - Click on the "Next" button
 - Do not change the size of the partition, as you want all of the free space on
   your portable USB-powered storage device to be used for a single exFAT
   formatted volume
 
-![](../../res/1/2.img-6.webp)
+![](../../images/1/2.img-6.webp)
 
 - On a Microsoft Windows based host, almost all volumes are associated with a
   unique alphabetical letter
@@ -294,7 +222,7 @@ DISKPART> exit
 - The letter value will change dynamically when you attach your portable
   USB-powered storage device into different host computer systems
 
-![](../../res/1/2.img-7.webp)
+![](../../images/1/2.img-7.webp)
 
 - Change the file system type to "exFAT"
 - Leave the allocation unit size as "Default"
@@ -304,7 +232,7 @@ DISKPART> exit
 - Ensure the quick format option is selected, or the format process will
   possibly take many hours to complete
 
-![](../../res/1/2.img-8.webp)
+![](../../images/1/2.img-8.webp)
 
 - Do not change the allocation unit size.
 - This screenshot is just to illustrate that the grouped sectors on the storage
@@ -316,7 +244,7 @@ DISKPART> exit
 - On servers, this value is manually adjusted to gain better performance from
   the host
 
-![](../../res/1/2.img-9.webp)
+![](../../images/1/2.img-9.webp)
 
 - On the summary screen, verify that both the "exFAT" file system AND "Default"
   allocation unit size are chosen
@@ -325,7 +253,7 @@ DISKPART> exit
 - The end result will be a single exFAT volume on your portable USB-powered
   storage device
 
-![](../../res/1/2.img-10.webp)
+![](../../images/1/2.img-10.webp)
 
 - Monitor the formatting process
 - It will be displayed as an incrementing (%) value
@@ -333,21 +261,20 @@ DISKPART> exit
   volume
 - Once it has, close the "Computer Management" applet
 
-![](../../res/1/2.img-10.webp)
+![](../../images/1/2.img-10.webp)
 
-![](../../res/1/2.img-11.webp)
+![](../../images/1/2.img-11.webp)
 
-```md
-# Using the (diskpart.exe) application, you can identify the partitioning scheme for the storage device
+- Using the (`diskpart.exe`) application, you can identify the partitioning
+  scheme for the storage device
 
+```console
 DISKPART> list disk
 
     Disk ###    Status              Size        Free        Dyn     Gpt
     --------    ----------------    ---------   ---------   -----   ------
     Disk 0      Online              476GB             0 B           *
     Disk 1      Online              465GB          465 GB           *
-
-DISKPART>
 ```
 
 ## Proper Removal of a Storage Device
