--- a/pages/1/4.md
+++ b/pages/1/4.md
@@ -16,14 +16,14 @@
 1. Click on the "New" button to begin the creation of a new virtual machine
    configuration profile
 
-![](../../res/1/4.img-1.webp)
+![](../../images/1/4.img-1.webp)
 
 2. Assign a meaningful name for the new virtual machine configuration profile
 
 - Identify the correct type, version and build (or as close as possible) for the
   Guest OS (operating system) being installed
 
-![](../../res/1/4.img-2.webp)
+![](../../images/1/4.img-2.webp)
 
 3. Assign an appropriate amount of the Host OS' physical memory for the Guest OS
    to use
@@ -35,7 +35,7 @@
 - Assigning more memory to the Guest OS is better, but be careful not to leave
   the Host OS with too little or it will perform poorly
 
-![](../../res/1/4.img-3.webp)
+![](../../images/1/4.img-3.webp)
 
 4. A new virtual disk image (`*.vdi`) file will need to be created
 
@@ -44,14 +44,14 @@
 - Think of a (`*.vdi`) file as a separate hard disk, which is attached to a
   virtual machine (instead of a physical computer)
 
-![](../../res/1/4.img-4.webp)
+![](../../images/1/4.img-4.webp)
 
 5. Use the native virtual disk format for the Oracle VM VirtualBox platform
 
 - The remaining formats listed are for other virtualization platform products
   (e.g. VMware ESXi, Microsoft Hyper-V, etc)
 
-![](../../res/1/4.img-5.webp)
+![](../../images/1/4.img-5.webp)
 
 6. Allow the virtual disk image to start off small in size, and grow as needed
 
@@ -59,7 +59,7 @@
   is typically suggested, so you don't accidentally consume all of the available
   space on your portable USB-powered storage device
 
-![](../../res/1/4.img-6.webp)
+![](../../images/1/4.img-6.webp)
 
 7. Allow the virtual disk image file to grow to a maximum of (300 GB)
 
@@ -68,7 +68,7 @@
 - Click on the folder icon, and identify a folder on your portable USB-powered
   storage device where you want this new (`*.vdi`) file to be created
 
-![](../../res/1/4.img-7.webp)
+![](../../images/1/4.img-7.webp)
 
 8. The wizard does a good job of creating the virtual machine configuration
    profile, but there are additional settings which need to be made
@@ -76,14 +76,14 @@
 - With the new virtual machine configuration profile selected (highlighted by
   the colour blue), click on the "Settings" button
 
-![](../../res/1/4.img-8.webp)
+![](../../images/1/4.img-8.webp)
 
 9. Configure the virtual machine for bidirectional clipboard capability
 
 - Once the Guest Additions are installed onto the Guest OS, you will be able to
   (cut+copy+paste) data between the Host OS and the Guest OS
 
-![](../../res/1/4.img-9.webp)
+![](../../images/1/4.img-9.webp)
 
 10. The days of floppy disks are long gone
 
@@ -91,7 +91,7 @@
   hardware, so deselect it
 - Also, change the boot order for a typical configuration
 
-![](../../res/1/4.img-10.webp)
+![](../../images/1/4.img-10.webp)
 
 11. Aside from memory, one of the best settings to increase is the amount of
     virtual CPUs associated with the virtual machine
@@ -101,7 +101,7 @@
 - The maximum number of (8 CPUs) above, is the sum of all CPU cores and
   hyper-threading features of the CPUs on this physical host computer system
 
-![](../../res/1/4.img-11.webp)
+![](../../images/1/4.img-11.webp)
 
 12. Many of the Guest OSes you create or use throughout your program will make
     use of a graphical desktop
@@ -110,7 +110,7 @@
   you assign the maximum amount of video memory for each virtual machine
   configuration profile you create
 
-![](../../res/1/4.img-12.webp)
+![](../../images/1/4.img-12.webp)
 
 13. At a minimum, this is what you want all of your virtual machine
     configuration profiles to look like ...from a storage perspective
@@ -119,7 +119,7 @@
   CD/DVD-ROM storage device, connected to the newer and faster SATA storage
   controller
 
-![](../../res/1/4.img-13.webp)
+![](../../images/1/4.img-13.webp)
 
 14. Next, associate the operating system installation media with the virtual
     optical CD/DVD-ROM storage device
@@ -127,33 +127,33 @@
 - Click on the CD/DVD icon, and select the "Choose Virtual Optical Disk File..."
   option
 
-![](../../res/1/4.img-14.webp)
+![](../../images/1/4.img-14.webp)
 
 15. Locate and click on the DVD ISO image file you downloaded earlier
 
 - This is what the virtual machine will initially boot from, in order to install
   the Guest OS' operating system into the virtual disk image (`*.vdi`) file
 
-![](../../res/1/4.img-15.webp)
+![](../../images/1/4.img-15.webp)
 
 16. Ensure the installation media is associated with the virtual optical
     CD/DVD-ROM storage device, or you won't be able to boot your virtual machine
     successfully
 
-![](../../res/1/4.img-16.webp)
+![](../../images/1/4.img-16.webp)
 
 17. The installation of the Guest OS will need Internet connectivity, and
     without having to use a dedicated IPv4 address
 
 - The NAT adapter will satisfy this requirement
 
-![](../../res/1/4.img-17.webp)
+![](../../images/1/4.img-17.webp)
 
 18. With the virtual machine configuration properly configured, click on the
     "Start" button to boot the virtual machine, and begin the operating system
     installation process
 
-![](../../res/1/4.img-18.webp)
+![](../../images/1/4.img-18.webp)
 
 ## Installing the Operating System
 
@@ -162,28 +162,28 @@
 
 - Click on the "Next" button to continue
 
-![](../../res/1/4.img-19.webp)
+![](../../images/1/4.img-19.webp)
 
 20. Click on the "Install now" button to continue
 
-![](../../res/1/4.img-20.webp)
+![](../../images/1/4.img-20.webp)
 
 21. Enter your personal software product key, then click on the "Next" button
 
-![](../../res/1/4.img-21.webp)
+![](../../images/1/4.img-21.webp)
 
 22. Accept the license agreement
 
 - Click on the "Next" button to continue
 
-![](../../res/1/4.img-22.webp)
+![](../../images/1/4.img-22.webp)
 
 23. Select the appropriate installation type
 
 - You have no existing operating system to "Upgrade" ...so select the "Custom"
   installation type instead
 
-![](../../res/1/4.img-23.webp)
+![](../../images/1/4.img-23.webp)
 
 24. This screen identifies the options available for installing the operating
     system onto a hard disk
@@ -193,14 +193,14 @@
 - As such, only (1) hard disk is listed above
 - Click on the "Next" button to continue
 
-![](../../res/1/4.img-24.webp)
+![](../../images/1/4.img-24.webp)
 
 25. DO NOT sign in using personal username and password credentials
 
 - Click on the option "Domain join instead"
 - This option will keep the Guest OS in a state
 
-![](../../res/1/4.img-25.webp)
+![](../../images/1/4.img-25.webp)
 
 26. Create a generic local user account on the new host
 
@@ -208,22 +208,22 @@
 - This local user account will have full administrative authority on the Guest
   OS
 
-![](../../res/1/4.img-26.webp)
+![](../../images/1/4.img-26.webp)
 
 27. Enter a password of (P&ssw0rd) for the new (localuser) account
 
-![](../../res/1/4.img-27.webp)
+![](../../images/1/4.img-27.webp)
 
 28. Confirm the password
 
 - Enter a password of (P&ssw0rd) for the new (localuser) account
 
-![](../../res/1/4.img-28.webp)
+![](../../images/1/4.img-28.webp)
 
 29. Complete the security questions using information which you will easily
     remember if you ever forget this user account's password value
 
-![](../../res/1/4.img-29.webp)
+![](../../images/1/4.img-29.webp)
 
 ## Customizing the Guest OS
 
@@ -236,14 +236,14 @@
   zone
 - Click on the "Date and Time" Control Panel applet
 
-![](../../res/1/4.img-30.webp)
+![](../../images/1/4.img-30.webp)
 
 31. Click on the "Change time zone..." button (A), then select Eastern Time from
     the drop-down selection list (B)
 
 - Click on each of the "OK" buttons to save the setting change
 
-![](../../res/1/4.img-31.webp)
+![](../../images/1/4.img-31.webp)
 
 32. When testing network connectivity, the most annoying feature of any
     operating system is the internal firewall
@@ -252,27 +252,27 @@
   point, we do not want)
 - Click on the "Windows Defender Firewall" Control Panel applet
 
-![](../../res/1/4.img-32.webp)
+![](../../images/1/4.img-32.webp)
 
 33. Click on the "Turn Windows Defender Firewall on or off" option
 
-![](../../res/1/4.img-33.webp)
+![](../../images/1/4.img-33.webp)
 
 34. Disable the firewall feature for both the Private and Public network
     interfaces of the Guest OS
 
 - Click on the "OK" button when finished
 
-![](../../res/1/4.img-34.webp)
+![](../../images/1/4.img-34.webp)
 
 35. Click on the "All Control Panel Items" option in the navigation field to
     return to the main Control Panel app selection screen
 
-![](../../res/1/4.img-35.webp)
+![](../../images/1/4.img-35.webp)
 
 36. Click on the "Power Options" Control Panel applet
 
-![](../../res/1/4.img-36.webp)
+![](../../images/1/4.img-36.webp)
 
 37. Click on the option to "Choose when to turn off the display"
 
@@ -283,20 +283,20 @@
   every few minutes of inactivity, it is best to configure the screen to never
   turn off
 
-![](../../res/1/4.img-37.webp)
+![](../../images/1/4.img-37.webp)
 
 38. From the drop-down list(s), select the "Never" option(s)
 
-![](../../res/1/4.img-38.webp)
+![](../../images/1/4.img-38.webp)
 
 39. Click on the "Save changes" button to activate and save this setting change
 
-![](../../res/1/4.img-39.webp)
+![](../../images/1/4.img-39.webp)
 
 40. Click on the "All Control Panel Items" option in the navigation field to
     return to the main Control Panel app selection screen
 
-![](../../res/1/4.img-40.webp)
+![](../../images/1/4.img-40.webp)
 
 41. When the Microsoft Windows operating system was initially installed, the
     unique hostname associated with the Guest OS was randomly created
@@ -305,13 +305,13 @@
 - You will change this value to include your personal 9-digit number
 - Click on the "System" Control Panel applet
 
-![](../../res/1/4.img-41.webp)
+![](../../images/1/4.img-41.webp)
 
 42. Identify the (current) randomized hostname value for the Guest OS
 
 - Click on the "Change settings" option
 
-![](../../res/1/4.img-42.webp)
+![](../../images/1/4.img-42.webp)
 
 43. Click on the "Change" button, and type in a new hostname value using the
     format (w000123456a)
@@ -320,7 +320,7 @@
 - This will ensure all hosts on the network, at any given time, are unique, and
   will not be in direct conflict with any other host
 
-![](../../res/1/4.img-43.webp)
+![](../../images/1/4.img-43.webp)
 
 44. Once the hostname value has been changed, click on the "OK" button to save
     the setting change
@@ -328,15 +328,15 @@
 - As indicated, the Guest OS will need to be restarted in order for the new
   hostname value to become active
 
-![](../../res/1/4.img-44.webp)
+![](../../images/1/4.img-44.webp)
 
 45. Click on the "Close" button
 
-![](../../res/1/4.img-45.webp)
+![](../../images/1/4.img-45.webp)
 
 46. Restart the Guest OS when prompted
 
-![](../../res/1/4.img-46.webp)
+![](../../images/1/4.img-46.webp)
 
 47. At the "Sign-on Screen", authenticate with the Localuser's security
     credentials (Username = localuser) and (Password = P&ssw0rd)
@@ -344,7 +344,7 @@
 - Hit the `<Enter>` key on the keyboard, or click on the arrow icon, to complete
   the authentication process
 
-![](../../res/1/4.img-47.webp)
+![](../../images/1/4.img-47.webp)
 
 ## Updating the Operating System
 
@@ -356,14 +356,14 @@
   of this window, indicating that the host is completely up to date (see next
   step)
 
-![](../../res/1/4.img-48.webp)
+![](../../images/1/4.img-48.webp)
 
 49. Manually restart the Guest OS to make sure all the software updates have
     been completely installed
 
 - From the "Start Menu", select the option to restart the host
 
-![](../../res/1/4.img-49.webp)
+![](../../images/1/4.img-49.webp)
 
 ## Installing the Guest Additions
 
@@ -378,38 +378,38 @@
 - Next, double-click on the "VirtualBox Guest Additions" CD, which is associated
   with the virtual CD/DVD-ROM drive
 
-![](../../res/1/4.img-50.webp)
+![](../../images/1/4.img-50.webp)
 
 51. If the auto-run feature does not automatically launch, you may need to
     double-click on the explicit executable to begin the installation of the
     Oracle VM VirtualBox Guest Additions
 
-![](../../res/1/4.img-51.webp)
+![](../../images/1/4.img-51.webp)
 
 52. Install the Oracle VM VirtualBox Guest Additions software product using the
     default settings
 
 - Click on the "Next" button to continue
 
-![](../../res/1/4.img-52.webp)
+![](../../images/1/4.img-52.webp)
 
 53. Ensure the checkbox is enabled to always trust software officially developed
     and distributed by Oracle Corporation
 
 - Click on the "Install" button to continue
 
-![](../../res/1/4.img-53.webp)
+![](../../images/1/4.img-53.webp)
 
 54. Click on the "Finish" button to restart the Guest OS
 
-![](../../res/1/4.img-54.webp)
+![](../../images/1/4.img-54.webp)
 
 55. Resize the Guest OS console window
 
 - The Guest OS' desktop will resize accordingly, if the Guest Additions were
   installed successfully
 
-![](../../res/1/4.img-55.webp)
+![](../../images/1/4.img-55.webp)
 
 ## Notepad++ Text Editor
 
@@ -438,11 +438,11 @@
   to the last section in this PowerPoint slide-set entitled (Phoned-Based
   Product Activation)
 - This alternative process for activating the operating system product works if:
-- ...you receive error messages during the normal activation process
-- ...you are attempting to activate the operating system product without
-  Internet connectivity
-- ...you are trying to activate the operating system using the same product
-  activation key more than once
+  - ...you receive error messages during the normal activation process
+  - ...you are attempting to activate the operating system product without
+    Internet connectivity
+  - ...you are trying to activate the operating system using the same product
+    activation key more than once
 
 56. From the "Activation" window, note that this operating system is currently
     activated
@@ -455,7 +455,7 @@
   system, skip to the last section in this PowerPoint slide-set and go through
   the Phone-based Product Activation process
 
-![](../../res/1/4.img-56.webp)
+![](../../images/1/4.img-56.webp)
 
 ## Backing up the (`*.vdi`) File
 
@@ -482,7 +482,7 @@
 - This Guest OS console window will completely disappear once the process has
   finished
 
-![](../../res/1/4.img-57.webp)
+![](../../images/1/4.img-57.webp)
 
 ## The Virtual Media Manager Repository
 
@@ -509,42 +509,42 @@
 - It must first be released from the associated virtual machine configuration
   profile
 
-![](../../res/1/4.img-58.webp)
+![](../../images/1/4.img-58.webp)
 
 59. Also make note of the location of the (`*.vdi`) file (it should be located
     on your portable USB-powered storage device)
 
-![](../../res/1/4.img-59.webp)
+![](../../images/1/4.img-59.webp)
 
 60. Click on the (Release) icon, and release the virtual disk image (`*.vdi`)
     file from the (Microsoft Windows) virtual machine configuration profile
 
-![](../../res/1/4.img-60.webp)
+![](../../images/1/4.img-60.webp)
 
 61. Once the image file has been released from a virtual machine configuration
     profile, you are then able to remove it from the Virtual Media Manager
     repository
 
-![](../../res/1/4.img-61.webp)
+![](../../images/1/4.img-61.webp)
 
 62. Click on the (Remove) icon, and remove the virtual disk image (`*.vdi`) file
     from the Virtual Media Manager repository
 
 - WARNING, DO NOT delete the file when prompted (see next step)
 
-![](../../res/1/4.img-62.webp)
+![](../../images/1/4.img-62.webp)
 
 63. There are very few times where you will delete the image file from within
     the Oracle VM VirtualBox application environment
 
 - Select the option to (Keep) the image file
 
-![](../../res/1/4.img-63.webp)
+![](../../images/1/4.img-63.webp)
 
 64. The Virtual Media Manager now includes zero virtual disk image (`*.vdi`)
     files (a.k.a. hard disk image files)
 
-![](../../res/1/4.img-64.webp)
+![](../../images/1/4.img-64.webp)
 
 65. There are (2) CD/DVD installation media currently in the Virtual Media
     Manager
@@ -552,14 +552,14 @@
 - Using similar steps as before (with the virtual hard disk (`*.vdi`) image)
   ...remove these (2) CD/DVD installation media from the Virtual Media Manager
 
-![](../../res/1/4.img-65.webp)
+![](../../images/1/4.img-65.webp)
 
 66. Now, the Virtual Media Manager repository includes zero CD/DVD image files,
     and, zero hard disk image files
 
 - Close the Virtual Media Manager interface
 
-![](../../res/1/4.img-66.webp)
+![](../../images/1/4.img-66.webp)
 
 67. With no attached virtual hard disk (`*.vdi`) file to the (Microsoft Windows)
     virtual machine configuration profile, you can now complete the removal
@@ -568,13 +568,13 @@
 - Right-click on the (Microsoft Windows) virtual machine configuration profile,
   and select "Remove..." from the short-cut menu options
 
-![](../../res/1/4.img-67.webp)
+![](../../images/1/4.img-67.webp)
 
 68. Select the option to delete all remaining files associated with the
     (Microsoft Windows) virtual machine profile, then close the Oracle VM
     VirtualBox application
 
-![](../../res/1/4.img-68.webp)
+![](../../images/1/4.img-68.webp)
 
 69. On the Host OS, make a copy of the virtual disk image (`*.vdi`) file that
     includes your Microsoft Windows 10 Guest OS installation
@@ -582,4 +582,4 @@
 - In the image above, (A) is the original file, and (B) is a backup copy of (A)
   ...where each file is located below a meaningful folder name
 
-![](../../res/1/4.img-69.webp)
+![](../../images/1/4.img-69.webp)
