--- a/pages/1/5.md
+++ b/pages/1/5.md
@@ -16,14 +16,14 @@
 1. Click on the "New" button to begin the creation of a new virtual machine
    configuration profile
 
-![](../../res/1/5.img-1.webp)
+![](../../images/1/5.img-1.webp)
 
 2. Assign a meaningful name for the new virtual machine configuration profile
 
 - Identify the correct type, version and build (or as close as possible) for the
   Guest OS (operating system) being installed
 
-![](../../res/1/5.img-2.webp)
+![](../../images/1/5.img-2.webp)
 
 3. Assign an appropriate amount of the Host OS' physical memory for the Guest OS
    to use
@@ -35,7 +35,7 @@
 - Assigning more memory to the Guest OS is better- but be careful not to leave
   the Host OS with too little or it will perform poorly
 
-![](../../res/1/5.img-3.webp)
+![](../../images/1/5.img-3.webp)
 
 4. A new virtual disk image (`*.vdi`) file will need to be created
 
@@ -44,7 +44,7 @@
 - Think of a (`*.vdi`) file as a separate hard disk, which is attached to a
   virtual machine (instead of a physical computer)
 
-![](../../res/1/5.img-4.webp)
+![](../../images/1/5.img-4.webp)
 
 5. Use the native virtual disk format for the Oracle VM VirtualBox platform
 
@@ -52,7 +52,7 @@
   (e.g
 - VMware ESXi, Microsoft Hyper-V, etc.)
 
-![](../../res/1/5.img-5.webp)
+![](../../images/1/5.img-5.webp)
 
 6. Allow the virtual disk image to start off small in size, and grow as needed
 
@@ -60,7 +60,7 @@
   is typically suggested, so you don't accidentally consume all of the available
   space on your portable USB-powered storage device
 
-![](../../res/1/5.img-6.webp)
+![](../../images/1/5.img-6.webp)
 
 7. Allow the virtual disk image file to grow to a maximum of (300 GB)
 
@@ -69,7 +69,7 @@
 - Click on the folder icon, and identify a folder on your portable USB-powered
   storage device where you want this new (`*.vdi`) file to be created
 
-![](../../res/1/5.img-7.webp)
+![](../../images/1/5.img-7.webp)
 
 8. The wizard does a good job of creating the virtual machine configuration
    profile- but there are additional settings which need to be made
@@ -77,14 +77,14 @@
 - With the new virtual machine configuration profile selected (highlighted by
   the colour blue), click on the "Settings" button
 
-![](../../res/1/5.img-8.webp)
+![](../../images/1/5.img-8.webp)
 
 9. Configure the virtual machine for bidirectional clipboard capability
 
 - Once the Guest Additions are installed onto the Guest OS, you will be able to
   (cut+copy+paste) data between the Host OS and the Guest OS
 
-![](../../res/1/5.img-9.webp)
+![](../../images/1/5.img-9.webp)
 
 10. The days of floppy disks are long gone
 
@@ -92,7 +92,7 @@
   hardware- so deselect it
 - Also, change the boot order for a typical configuration
 
-![](../../res/1/5.img-10.webp)
+![](../../images/1/5.img-10.webp)
 
 11. Aside from memory, one of the best settings to increase is the amount of
     virtual CPUs associated with the virtual machine
@@ -102,7 +102,7 @@
 - The maximum number of (8 CPUs) above, is the sum of all CPU cores and
   hyper-threading features of the CPUs on this physical host computer system
 
-![](../../res/1/5.img-11.webp)
+![](../../images/1/5.img-11.webp)
 
 12. Many of the Guest OSes you create or use throughout your program will make
     use of a graphical desktop
@@ -111,7 +111,7 @@
   you assign the maximum amount of video memory for each virtual machine
   configuration profile you create
 
-![](../../res/1/5.img-12.webp)
+![](../../images/1/5.img-12.webp)
 
 13. At a minimum, this is what you want all of your virtual machine
     configuration profiles to look like, from a storage perspective
@@ -120,7 +120,7 @@
   CD/DVD-ROM storage device- connected to the newer and faster SATA storage
   controller
 
-![](../../res/1/5.img-13.webp)
+![](../../images/1/5.img-13.webp)
 
 14. Next, associate the operating system installation media with the virtual
     optical CD/DVD-ROM storage device
@@ -128,33 +128,33 @@
 - Click on the CD/DVD icon, and select the "Choose Virtual Optical Disk File..."
   option
 
-![](../../res/1/5.img-14.webp)
+![](../../images/1/5.img-14.webp)
 
 15. Locate and click on the DVD ISO image file you downloaded earlier
 
 - This is what the virtual machine will initially boot from, in order to install
   the Guest OS' operating system into the virtual disk image (`*.vdi`) file
 
-![](../../res/1/5.img-15.webp)
+![](../../images/1/5.img-15.webp)
 
 16. Ensure the installation media is associated with the virtual optical
     CD/DVD-ROM storage device- or you won't be able to boot your virtual machine
     successfully
 
-![](../../res/1/5.img-16.webp)
+![](../../images/1/5.img-16.webp)
 
 17. The installation of the Guest OS will need Internet connectivity, and
     without having to use a dedicated IPv4 address
 
 - The NAT adapter will satisfy this requirement
 
-![](../../res/1/5.img-17.webp)
+![](../../images/1/5.img-17.webp)
 
 18. With the virtual machine configuration properly configured, click on the
     "Start" button to boot the virtual machine, and begin the operating system
     installation process
 
-![](../../res/1/5.img-18.webp)
+![](../../images/1/5.img-18.webp)
 
 ## Installing the Operating System
 
@@ -163,17 +163,17 @@
 
 - Click on the "Next" button to continue
 
-![](../../res/1/5.img-19.webp)
+![](../../images/1/5.img-19.webp)
 
 20. Click on the "Install now" button to continue
 
-![](../../res/1/5.img-20.webp)
+![](../../images/1/5.img-20.webp)
 
 21. Enter your personal software product key, then click on the "Next" button
 
-![](../../res/1/5.img-21.webp)
+![](../../images/1/5.img-21.webp)
 
-22. CAUTION !!!- The default selection is NOT what you want for THIS
+22. **CAUTION!!!** The default selection is NOT what you want for this
     installation
 
 - Ensure you select the "Desktop Experience" option
@@ -182,14 +182,14 @@
 - The default option will not provide a traditional desktop environment
 - Click on the "Next" button to continue
 
-![](../../res/1/5.img-22.webp)
+![](../../images/1/5.img-22.webp)
 
 23. Select the appropriate installation type
 
 - You have no existing operating system to "Upgrade"- so select the "Custom"
   installation type instead
 
-![](../../res/1/5.img-23.webp)
+![](../../images/1/5.img-23.webp)
 
 24. This screen identifies the options available for installing the operating
     system onto a hard disk
@@ -199,12 +199,12 @@
 - As such, only (1) hard disk is listed above
 - Click on the "Next" button to continue
 
-![](../../res/1/5.img-24.webp)
+![](../../images/1/5.img-24.webp)
 
 25. Once the Guest OS operating system installation has completed, restart the
     virtual machine
 
-![](../../res/1/5.img-25.webp)
+![](../../images/1/5.img-25.webp)
 
 26. Every Microsoft Windows Server host comes with a built-in administrative
     user account called (Administrator)
@@ -213,7 +213,7 @@
 - This local user account will have full administrative authority on the Guest
   OS
 
-![](../../res/1/5.img-26.webp)
+![](../../images/1/5.img-26.webp)
 
 27. At the "Sign-on Screen", authenticate with the Administrator's security
     credentials (Username = Administrator) and (Password = Adm1np&ss)
@@ -234,7 +234,9 @@
   Windows Server operating system
 - From the menu bar, located at the top of the Guest OS console window, select
   the following menu options:
-  - Input -> Keyboard -> Insert Ctrl-Alt-Del ![](../../res/1/5.img-27.webp)
+  - Input -> Keyboard -> Insert Ctrl-Alt-Del
+
+![](../../images/1/5.img-27.webp)
 
 28. Select "Yes" to allow the Guest OS to function normally in a network
     environment
@@ -245,12 +247,12 @@
   (MAC) Address, which is a unique 12-digit hexadecimal value that is associated
   with every Ethernet network adapter (physical or virtual) in the world
 
-![](../../res/1/5.img-28.webp)
+![](../../images/1/5.img-28.webp)
 
 29. Suppress this message from appearing every time the Server Manager
     application is launched
 
-![](../../res/1/5.img-29.webp)
+![](../../images/1/5.img-29.webp)
 
 30. An application called the "Server Manager" will run (by default) every time
     the Administrator signs-on to the Microsoft Windows Server host
@@ -259,19 +261,19 @@
 - Click on "Manage", then "Server Manager Properties", in order to disable the
   auto-startup feature for this application
 
-![](../../res/1/5.img-30.webp)
+![](../../images/1/5.img-30.webp)
 
 31. Check the option to disable the auto-startup feature for the "Server
     Manager" application
 
 - Click on the "OK" button to save the setting change
 
-![](../../res/1/5.img-31.webp)
+![](../../images/1/5.img-31.webp)
 
 32. Since you don't need to use the "Server Manager" at this point, gracefully
     close the application
 
-![](../../res/1/5.img-32.webp)
+![](../../images/1/5.img-32.webp)
 
 ## Customizing the Guest OS
 
@@ -280,7 +282,7 @@
 
 - Click on each of the "OK" buttons to save the setting change
 
-![](../../res/1/5.img-33.webp)
+![](../../images/1/5.img-33.webp)
 
 34. When testing network connectivity the most annoying feature of any operating
     system is the internal firewall
@@ -289,27 +291,27 @@
   point, we do not want)
 - Click on the "Windows Defender Firewall" Control Panel applet
 
-![](../../res/1/5.img-34.webp)
+![](../../images/1/5.img-34.webp)
 
 35. Click on the "Turn Windows Defender Firewall on or off" option
 
-![](../../res/1/5.img-35.webp)
+![](../../images/1/5.img-35.webp)
 
 36. Disable the firewall feature for both the Private and Public network
     interfaces of the Guest OS
 
 - Click on the "OK" button when finished
 
-![](../../res/1/5.img-36.webp)
+![](../../images/1/5.img-36.webp)
 
 37. Click on the "All Control Panel Items" option in the navigation field to
     return to the main Control Panel app selection screen
 
-![](../../res/1/5.img-37.webp)
+![](../../images/1/5.img-37.webp)
 
 38. Click on the "Power Options" Control Panel applet
 
-![](../../res/1/5.img-38.webp)
+![](../../images/1/5.img-38.webp)
 
 39. Click on the option to "Choose when to turn off the display"
 
@@ -320,20 +322,20 @@
   every few minutes of inactivity- it is best to configure the screen to never
   turn off
 
-![](../../res/1/5.img-39.webp)
+![](../../images/1/5.img-39.webp)
 
 40. From the drop-down list(s), select the "Never" option(s)
 
-![](../../res/1/5.img-40.webp)
+![](../../images/1/5.img-40.webp)
 
 41. Click on the "Save changes" button to activate and save this setting change
 
-![](../../res/1/5.img-41.webp)
+![](../../images/1/5.img-41.webp)
 
 42. Click on the "All Control Panel Items" option in the navigation field to
     return to the main Control Panel app selection screen
 
-![](../../res/1/5.img-42.webp)
+![](../../images/1/5.img-42.webp)
 
 43. When the Microsoft Windows Server operating system was initially installed,
     the unique hostname associated with the Guest OS was randomly created
@@ -342,13 +344,13 @@
 - You will change this value to include your personal 9-digit number
 - Click on the "System" Control Panel applet
 
-![](../../res/1/5.img-43.webp)
+![](../../images/1/5.img-43.webp)
 
 44. Identify the (current) randomized hostname value for the Guest OS
 
 - Click on the "Change settings" option
 
-![](../../res/1/5.img-44.webp)
+![](../../images/1/5.img-44.webp)
 
 45. Click on the "Change" button, and type in a new hostname value using the
     format (ws000123456a)
@@ -357,7 +359,7 @@
 - This will ensure all hosts on the network, at any given time, are unique- and
   will not be in direct conflict with any other host
 
-![](../../res/1/5.img-45.webp)
+![](../../images/1/5.img-45.webp)
 
 46. Once the hostname value has been changed, click on the "OK" button to save
     the setting change
@@ -365,15 +367,15 @@
 - As indicated, the Guest OS will need to be restarted in order for the new
   hostname value to become active
 
-![](../../res/1/5.img-46.webp)
+![](../../images/1/5.img-46.webp)
 
 47. Click on the "Close" button
 
-![](../../res/1/5.img-47.webp)
+![](../../images/1/5.img-47.webp)
 
 48. Restart the Guest OS when prompted
 
-![](../../res/1/5.img-48.webp)
+![](../../images/1/5.img-48.webp)
 
 49. At the "Sign-on Screen", authenticate with the Administrator's security
     credentials (Username = Administrator) and (Password = Adm1np&ss)
@@ -381,7 +383,7 @@
 - Hit the `<Enter>` key on the keyboard, or click on the arrow icon, to complete
   the authentication process
 
-![](../../res/1/5.img-49.webp)
+![](../../images/1/5.img-49.webp)
 
 ## Updating the Operating System
 
@@ -393,7 +395,7 @@
   of this window, indicating that the host is completely up to date (see next
   slide)
 
-![](../../res/1/5.img-50.webp)
+![](../../images/1/5.img-50.webp)
 
 51. After repeating the update process (possibly several times), a message will
     eventually appear indicating that the host is now completely up to date
@@ -406,14 +408,14 @@
   is up to date
 - Close the "Settings" window when finished
 
-![](../../res/1/5.img-51.webp)
+![](../../images/1/5.img-51.webp)
 
 52. Manually restart the Guest OS to make sure all the software updates have
     been completely installed
 
 - From the "Start Menu", select the option to restart the host
 
-![](../../res/1/5.img-52.webp)
+![](../../images/1/5.img-52.webp)
 
 53. On Microsoft Windows Server hosts, you must select a reason as to why the
     host is being shutdown or restarted
@@ -422,7 +424,7 @@
   reason, then click on the "Continue" button
 - The Guest OS will then restart
 
-![](../../res/1/5.img-53.webp)
+![](../../images/1/5.img-53.webp)
 
 54. At the "Sign-on Screen", authenticate with the Administrator's security
     credentials (Username = Administrator) and (Password = Adm1np&ss)
@@ -430,14 +432,14 @@
 - Hit the `<Enter>` key on the keyboard, or click on the arrow icon, to complete
   the authentication process
 
-![](../../res/1/5.img-54.webp)
+![](../../images/1/5.img-54.webp)
 
 55. Click on the "About" category, and scroll down to the bottom
 
 - Here you will find details regarding the operating system's edition, version,
   and build number
 
-![](../../res/1/5.img-55.webp)
+![](../../images/1/5.img-55.webp)
 
 ## Installing the Guest Additions
 
@@ -452,39 +454,39 @@
 - Next, double-click on the "VirtualBox Guest Additions" CD, which is associated
   with the virtual CD/DVD-ROM drive
 
-![](../../res/1/5.img-56.webp)
+![](../../images/1/5.img-56.webp)
 
 57. If the auto-run feature does not automatically launch, you may need to
     double-click on the explicit executable to begin the installation of the
     Oracle VM VirtualBox Guest Additions
 
-![](../../res/1/5.img-57.webp)
+![](../../images/1/5.img-57.webp)
 
 58. Install the Oracle VM VirtualBox Guest Additions software product using the
     default settings
 
 - Click on the "Next" button to continue
 
-![](../../res/1/5.img-58.webp)
+![](../../images/1/5.img-58.webp)
 
 59. Click on the "Next" button to continue
 
-![](../../res/1/5.img-59.webp)
+![](../../images/1/5.img-59.webp)
 
 60. Click on the "Install" button to continue
 
-![](../../res/1/5.img-60.webp)
+![](../../images/1/5.img-60.webp)
 
 61. Ensure the checkbox is enabled to always trust software officially developed
     and distributed by Oracle Corporation
 
 - Click on the "Install" button to continue
 
-![](../../res/1/5.img-61.webp)
+![](../../images/1/5.img-61.webp)
 
 62. Click on the "Finish" button to restart the Guest OS
 
-![](../../res/1/5.img-62.webp)
+![](../../images/1/5.img-62.webp)
 
 63. At the "Sign-on Screen", authenticate with the Administrator's security
     credentials (Username = Administrator) and (Password = Adm1np&ss)
@@ -492,13 +494,13 @@
 - Hit the `<Enter>` key on the keyboard, or click on the arrow icon, to complete
   the authentication process
 
-![](../../res/1/5.img-63.webp)
+![](../../images/1/5.img-63.webp)
 
 64. Here you can see that the Guest OS' desktop resized (bigger than in previous
     slide) ...confirming that the Guest Additions installed, and are running
     successfully
 
-![](../../res/1/5.img-64.webp)
+![](../../images/1/5.img-64.webp)
 
 65. From the "Start Menu" type the word -> server
 
@@ -514,21 +516,21 @@ the string value "server"
 - The Server Manger is used to change the enhanced security settings related to
   a Microsoft Internet Explorer host
 
-![](../../res/1/5.img-65.webp)
+![](../../images/1/5.img-65.webp)
 
 66. Click on the "Local Server" node
 
 - Then, locate and click on the ("On") hyperlink associated with the "IE
   Enhanced Security Configuration" setting
 
-![](../../res/1/5.img-66.webp)
+![](../../images/1/5.img-66.webp)
 
 67. Disable the enhanced security settings for both the administrative user
     account and the non-administrative user accounts on this host
 
 - Click on the "OK" button to save these setting changes
 
-![](../../res/1/5.img-67.webp)
+![](../../images/1/5.img-67.webp)
 
 68. Verify these changes have been made
 
@@ -537,7 +539,7 @@ the string value "server"
 - The setting should now show as being "Off"
 - Close the "Server Manager" application when finished
 
-![](../../res/1/5.img-68.webp)
+![](../../images/1/5.img-68.webp)
 
 ## Activating the Operating System
 
@@ -569,7 +571,7 @@ the string value "server"
   system, skip to the last section in this PowerPoint slide-set and go through
   the Phone-based Product Activation process
 
-![](../../res/1/5.img-69.webp)
+![](../../images/1/5.img-69.webp)
 
 ## Backing up the (`*.vdi`) File
 
@@ -595,7 +597,7 @@ the string value "server"
 
 - From the "Start Menu", select the option to "shut down" the host
 
-![](../../res/1/5.img-70.webp)
+![](../../images/1/5.img-70.webp)
 
 71. Since this is a planned shut down of the host, select the most appropriate
     reason, then click on the "Continue" button
@@ -605,7 +607,7 @@ the string value "server"
 - This Guest OS console window will completely disappear once the process has
   finished
 
-![](../../res/1/5.img-71.webp)
+![](../../images/1/5.img-71.webp)
 
 ## The Virtual Media Manager Repository
 
@@ -632,45 +634,45 @@ the string value "server"
 - It must first be released from the associated virtual machine configuration
   profile
 
-![](../../res/1/5.img-72.webp)
+![](../../images/1/5.img-72.webp)
 
 73. Also make note of the location of the (`*.vdi`) file (it should be located
     on your portable USB-powered storage device)
 
-![](../../res/1/5.img-73.webp)
+![](../../images/1/5.img-73.webp)
 
 74. Click on the (Release) icon, and release the virtual disk image (`*.vdi`)
     file from the (Microsoft Windows Server) virtual machine configuration
     profile
 
-![](../../res/1/5.img-74.webp)
+![](../../images/1/5.img-74.webp)
 
 75. Once the image file has been released from a virtual machine configuration
     profile, you are then able to remove it from the Virtual Media Manager
     repository
 
-![](../../res/1/5.img-75.webp)
+![](../../images/1/5.img-75.webp)
 
 76. Click on the (Remove) icon, and remove the virtual disk image (`*.vdi`) file
     from the Virtual Media Manager repository
 
 - WARNING- DO NOT delete the file when prompted (see next slide)
 
-![](../../res/1/5.img-76.webp)
+![](../../images/1/5.img-76.webp)
 
 77. There are very few times where you will delete the image file from within
     the Oracle VM VirtualBox application environment
 
 - Select the option to (Keep) the image file
 
-![](../../res/1/5.img-77.webp)
+![](../../images/1/5.img-77.webp)
 
 78. The Virtual Media Manager now includes zero virtual disk image (`*.vdi`)
     files (a.k.a
 
 - hard disk image files)
 
-![](../../res/1/5.img-78.webp)
+![](../../images/1/5.img-78.webp)
 
 79. There are (2) CD/DVD installation media currently in the Virtual Media
     Manager
@@ -678,14 +680,14 @@ the string value "server"
 - Using similar steps as before (with the virtual hard disk (`*.vdi`) image)
   ...remove these (2) CD/DVD installation media from the Virtual Media Manager
 
-![](../../res/1/5.img-79.webp)
+![](../../images/1/5.img-79.webp)
 
 80. Now, the Virtual Media Manager repository includes zero CD/DVD image files-
     and- zero hard disk image files
 
 - Close the Virtual Media Manager interface
 
-![](../../res/1/5.img-80.webp)
+![](../../images/1/5.img-80.webp)
 
 81. With no attached virtual hard disk (`*.vdi`) file to the (Microsoft Windows
     Server) virtual machine configuration profile, you can now complete the
@@ -694,13 +696,13 @@ the string value "server"
 - Right-click on the (Microsoft Windows Server) virtual machine configuration
   profile, and select "Remove..." from the short-cut menu options
 
-![](../../res/1/5.img-81.webp)
+![](../../images/1/5.img-81.webp)
 
 82. Select the option to delete all remaining files associated with the
     (Microsoft Windows Server) virtual machine profile, then close the Oracle VM
     VirtualBox application
 
-![](../../res/1/5.img-82.webp)
+![](../../images/1/5.img-82.webp)
 
 83. On the Host OS, make a copy of the virtual disk image (`*.vdi`) file that
     includes your Microsoft Windows Server 2019 Guest OS installation
@@ -708,4 +710,4 @@ the string value "server"
 - In the image above, (A) is the original file, and (B) is a backup copy of (A)
   ...where each file is located below a meaningful folder name
 
-![](../../res/1/5.img-83.webp)
+![](../../images/1/5.img-83.webp)
