--- a/pages/1/7.md
+++ b/pages/1/7.md
@@ -12,14 +12,14 @@
 1. Click on the "New" button to begin the creation of a new virtual machine
    configuration profile
 
-![](../../res/1/7.img-1.webp)
+![](../../images/1/7.img-1.webp)
 
 2. Assign a meaningful name for the new virtual machine configuration profile
 
 - Identify the correct type, version and build (or as close as possible) for the
   Guest OS (operating system) which has already been installed
 
-![](../../res/1/7.img-2.webp)
+![](../../images/1/7.img-2.webp)
 
 3. Assign an appropriate amount of the Host OS' physical memory for the Guest OS
    to use
@@ -31,32 +31,32 @@
 - Assigning more memory to the Guest OS is better, but be careful not to leave
   the Host OS with too little or it will perform poorly
 
-![](../../res/1/7.img-3.webp)
+![](../../images/1/7.img-3.webp)
 
 4. Select the option to use an existing virtual disk image (`*.vdi`) file
 
 - Click on the folder icon, to select your existing virtual disk image (`*.vdi`)
   file
 
-![](../../res/1/7.img-4.webp)
+![](../../images/1/7.img-4.webp)
 
 5. If the virtual disk image (`*.vdi`) file is not already listed, click on the
    "Add" button to add it to the Oracle VM VirtualBox environment
 
 - If it is already listed, click on it, then click on the "Choose" button
 
-![](../../res/1/7.img-5.webp)
+![](../../images/1/7.img-5.webp)
 
 6. Select the existing virtual disk image (`*.vdi`) file you wish to add to the
    Oracle VM VirtualBox environment, then click on the "Open" button
 
-![](../../res/1/7.img-6.webp)
+![](../../images/1/7.img-6.webp)
 
 7. Select the existing virtual disk image (`*.vdi`) file you wish to associate
    with this new virtual machine configuration profile, then click on the
    "Choose" button
 
-![](../../res/1/7.img-7.webp)
+![](../../images/1/7.img-7.webp)
 
 8. Confirm the virtual disk image (`*.vdi`) file you have selected for this new
    virtual machine configuration profile
@@ -64,7 +64,7 @@
 - If it is not correct, change it now
 - If it is correct, click on the "Create" button
 
-![](../../res/1/7.img-8.webp)
+![](../../images/1/7.img-8.webp)
 
 9. The wizard does a good job of creating the virtual machine configuration
    profile, but there are additional settings which need to be made
@@ -72,14 +72,14 @@
 - With the new virtual machine configuration profile selected (highlighted by
   the colour blue), click on the "Settings" button
 
-![](../../res/1/7.img-9.webp)
+![](../../images/1/7.img-9.webp)
 
 10. Configure the virtual machine for bidirectional clipboard capability
 
 - With the Guest Additions already installed onto the Guest OS, you will be able
   to (cut+copy+paste) data between the Host OS and the Guest OS
 
-![](../../res/1/7.img-10.webp)
+![](../../images/1/7.img-10.webp)
 
 11. The days of floppy disks are long gone
 
@@ -87,7 +87,7 @@
   hardware, so deselect it
 - Also, change the boot order for a typical configuration
 
-![](../../res/1/7.img-11.webp)
+![](../../images/1/7.img-11.webp)
 
 12. Aside from memory, one of the best settings to increase is the amount of
     virtual CPUs associated with the virtual machine
@@ -97,7 +97,7 @@
 - The maximum number of (8 CPUs) above, is the sum of all CPU cores and
   hyper-threading features of the CPUs on this physical host computer system
 
-![](../../res/1/7.img-12.webp)
+![](../../images/1/7.img-12.webp)
 
 13. Many of the Guest OSes you create or use throughout your program will make
     use of a graphical desktop
@@ -106,7 +106,7 @@
   you assign the maximum amount of video memory for each virtual machine
   configuration profile you create
 
-![](../../res/1/7.img-13.webp)
+![](../../images/1/7.img-13.webp)
 
 14. At a minimum, this is what you want all of your virtual machine
     configuration profiles to look like, from a storage perspective
@@ -115,7 +115,7 @@
   CD/DVD-ROM storage device, connected to the newer and faster SATA storage
   controller
 
-![](../../res/1/7.img-14.webp)
+![](../../images/1/7.img-14.webp)
 
 15. Select the appropriate network adapter type
 
@@ -123,7 +123,7 @@
   virtual machine configuration profiles, once the initial Guest OS
   installations have been completed
 
-![](../../res/1/7.img-15.webp)
+![](../../images/1/7.img-15.webp)
 
 16. With the virtual machine configuration properly configured, click on the
     "Start" button to boot the virtual machine
@@ -131,4 +131,4 @@
 - The existing operating system installed in the virtual disk image (`*.vdi`)
   file will start up
 
-![](../../res/1/7.img-16.webp)
+![](../../images/1/7.img-16.webp)
