--- a/pages/2/1.md
+++ b/pages/2/1.md
@@ -372,7 +372,7 @@
   - UNIX, Linux, etc
     - `/etc/hosts`
   - Example entries:
-  ```
+  ```console
   192.168.100.22  sales  sales.acme.com  server-01
   10.1.2.45       www    www.local
   ```
@@ -397,7 +397,7 @@
 - Used to obtain details of the node's current IP addressing configuration
 - Examples:
 
-```
+```console
 C:\> ipconfig -? # (Documentation for the utility)
 C:\> ipconfig
 C:\> ipconfig /all
@@ -410,7 +410,7 @@ C:\> netsh interface ipv4 show addresses
 - Used to obtain details of the node's current IP addressing configuration
 - Example:
 
-```
+```console
 $> ifconfig --help # (Documentation for the utility)
 $> ifconfig
 ```
@@ -431,7 +431,7 @@ $> ifconfig
 
 - Examples:
 
-```
+```console
 C:\> ping -? (Documentation for the utility)
 C:\> ping 127.0.0.1
 C:\> ping 206.191.86.29
@@ -455,7 +455,7 @@ C:\> ping -6 -a 2607:f8b0:400b:80b::2004
   information
 - Examples:
 
-```
+```console
 C:\> arp -? (Documentation for the utility)
 C:\> arp –a
 ```
@@ -465,7 +465,7 @@ C:\> arp –a
 - Used to view the ARP table (a.k.a. MAC address table ) for a specific node
 - Examples:
 
-```
+```console
 C:\> netsh int ipv4 show neighbors
 C:\> netsh int ipv6 show neighbors
 ```
