--- a/pages/3/1.md
+++ b/pages/3/1.md
@@ -2,7 +2,7 @@
 
 ## What is a Network Administrator?
 
-- A person responsible for the operation of all (or part of) an organization"s
+- A person responsible for the operation of all (or part of) an organization's
   computer network resources
 - In smaller organizations, the network administrator may manage all of the
   organization"s network resources
