--- a/pages/3/3.md
+++ b/pages/3/3.md
@@ -4,7 +4,7 @@
 - As such, you will configure each virtual machine configuration profile with
   the below virtual network settings
 
-![](../../res/3/3.img-1.webp)
+![](../../images/3/3.img-1.webp)
 
 ## Virtual Machine # 1 (Specifications)
 
