--- a/pages/3/4.md
+++ b/pages/3/4.md
@@ -15,17 +15,17 @@
    network switch, faulty router, faulty network cable, DHCP server is
    unavailable, etc)
 
-![](../../res/3/4.img-1.webp)
+![](../../images/3/4.img-1.webp)
 
 2. IP settings are changed at the network adapter level for the node
 
 - Click on the (Network and Sharing Center) Control Panel applet
 
-![](../../res/3/4.img-2.webp)
+![](../../images/3/4.img-2.webp)
 
 3. Click on the (Change adapter settings) hyperlink
 
-![](../../res/3/4.img-3.webp)
+![](../../images/3/4.img-3.webp)
 
 4. This node has only (1) network adapter associated with it
 
@@ -34,7 +34,7 @@
 - Select the network adapter you wish to change the settings of, right-click on
   it, and from the short-cut menu select (Properties)
 
-![](../../res/3/4.img-4.webp)
+![](../../images/3/4.img-4.webp)
 
 5. Locate the IPv4 protocol stack that is associated with the network adapter,
    and click on the (Properties) button
@@ -42,7 +42,7 @@
 - Here, you can see that this network adapter is currently configured to acquire
   it's IPv4 settings from a dynamic source on the network (e.g. a DHCP server)
 
-![](../../res/3/4.img-5.webp)
+![](../../images/3/4.img-5.webp)
 
 - To configure the network adapter with static IPv4 settings, toggle the radio
   buttons, and enter in the appropriate values
@@ -53,14 +53,14 @@
 
 6. Click on the (OK/Close) buttons to save the setting changes
 
-![](../../res/3/4.img-6.webp)
+![](../../images/3/4.img-6.webp)
 
 7. Verify that the IP settings have been applied to the node's network adapter
 
 - If they are not the values you expect to see, go back and check/change the
   network adapter's IP settings
 
-![](../../res/3/4.img-7.webp)
+![](../../images/3/4.img-7.webp)
 
 ## Verifying Network Connectivity
 
@@ -68,45 +68,44 @@
   that you can successfully communicate on the network (at an IP level)
 - The proper (ping) order for checking network connectivity is:
 
--
-  1. Ping the internal local loopback adapter (127.0.0.1). This will verify that
-     the IPv4 protocol stack is functioning correctly on the node
+1. Ping the internal local loopback adapter (127.0.0.1). This will verify that
+   the IPv4 protocol stack is functioning correctly on the node
+
 - If this step fails, and you do not see successful responses from the internal
   local loopback adapter, there is a serious problem with the node, and it would
   be pointless to continue with the remaining network connectivity verification
   steps
 
--
-  2. Next, ping the node's own network adapter
+2. Next, ping the node's own network adapter
+
 - There is no point in attempting to communicate on the network with other
   nodes, or the Internet, if your own node's network adapter card does not
   respond successfully
 
--
-  3. Next, ping a node that is on the same local network as your own node
+3. Next, ping a node that is on the same local network as your own node
+
 - There is no point in attempting to communicate with other nodes in other
   networks if you are unable to successfully communicate with nodes on your own
   network
 
--
-  4. Next, ping a node that is located on a different network to that of the one
-     your own node is located on
+4. Next, ping a node that is located on a different network to that of the one
+   your own node is located on
+
 - This step verifies if your default gateway value for your node is correct (and
   that the router is routing properly network traffic)
 
--
-  5. Next, ping other remote nodes (e.g. Internet-based nodes)
+5. Next, ping other remote nodes (e.g. Internet-based nodes)
 
--
-  6. Next, ping using hostnames and FQDN values
+6. Next, ping using hostnames and FQDN values
+
 - This will verify if forward lookup name resolution is functioning correctly
 - If it isn't, check the DNS server value settings for your node's network
   adapter
 - If they seem correct, then maybe there is a problem with the DNS server you
   are using
 
--
-  7. Finally, begin to use your node as normal
+7. Finally, begin to use your node as normal
+
 - Test using applications that communicate on the network to verify everything
   functions as expected
 - Not all network connectivity tests will result in successful responses
@@ -131,13 +130,13 @@
    - (A) pinging the internal local loopback adapter
    - (B) pinging the local node's network adapter
 
-![](../../res/3/4.img-8.webp)
+![](../../images/3/4.img-8.webp)
 
 9. Above shows all positive (successful) results from the ping test
    - (C) ping a nearby node on the same local network as this node
    - (D) ping another nearby node on the same local network as this node
 
-![](../../res/3/4.img-9.webp)
+![](../../images/3/4.img-9.webp)
 
 ## Typical Configuration Mistakes
 
@@ -159,7 +158,7 @@
   communicate with (`n.n.100.h`)
 - As such, expect network connectivity problems
 
-![](../../res/3/4.img-10.webp)
+![](../../images/3/4.img-10.webp)
 
 11. An attempt to ping a node located on the same physical local network as our
     own node, fails
@@ -168,7 +167,7 @@
 - Without a router device, communications will never occur between a node
   located in the (`n.n.200.h`) network and the (`n.n.100.h`) network
 
-![](../../res/3/4.img-11.webp)
+![](../../images/3/4.img-11.webp)
 
 12. By default, most modern day nodes are IPv6 capable, and are typically IPv6
     enabled too
@@ -176,10 +175,10 @@
 - Do not disable IPv6 on a modern day Microsoft Windows node, as it will
   typically "break" software on the node which relies on it to be enabled
 
-![](../../res/3/4.img-12.webp)
+![](../../images/3/4.img-12.webp)
 
 13. If you would like to experiment, and get comfortable with IPv6, then you can
     adjust the IPv6 settings for a node similar to how you will adjust the IPv4
     settings for nodes
 
-![](../../res/3/4.img-13.webp)
+![](../../images/3/4.img-13.webp)
