--- a/pages/3/6.md
+++ b/pages/3/6.md
@@ -6,11 +6,11 @@
   it's console window (one below battery and network icon)
 - Then, click on "Shared Folders Settings..."
 
-![](../../res/3/6.img-1.webp)
+![](../../images/3/6.img-1.webp)
 
 - Click on the add new shared folder icon
 
-![](../../res/3/6.img-2.webp)
+![](../../images/3/6.img-2.webp)
 
 - Click on the (Folder Path) arrow, and select which folder on your Host OS will
   be "shared" to this Guest OS
@@ -19,7 +19,7 @@
 - If you have multiple Guest OSes running, you would need to perform a similar
   process for each of them (if required)
 
-![](../../res/3/6.img-3.webp)
+![](../../images/3/6.img-3.webp)
 
 - Here, I wish to share the "Windows" folder currently located on my portable
   USB-powered storage device which is attached to my Host OS
@@ -28,32 +28,32 @@
 - Using the Oracle VirtualBox Shared Folders feature is a great way of
   transferring files between a Guest OS and the Host OS
 
-![](../../res/3/6.img-4.webp)
+![](../../images/3/6.img-4.webp)
 
 - By default, the share name (a.k.a. Folder Name) will inherit the (Folder
   Path's) folder name
 - Most of the time, this is not ideal
 
-![](../../res/3/6.img-5.webp)
+![](../../images/3/6.img-5.webp)
 
 - Type in a share name value that is relatively short, and contains no `<space>`
   characters, symbol characters, etc
 - The value should be unique to this Guest OS, and something that you can easily
   remember
 
-![](../../res/3/6.img-6.webp)
+![](../../images/3/6.img-6.webp)
 
 - Once the shared folder has been created for the Guest OS, click on the (OK)
   button to complete the process
 
-![](../../res/3/6.img-7.webp)
+![](../../images/3/6.img-7.webp)
 
 ## Mapping to a Shared Folder
 
 - From within the Guest OS you created an Oracle VirtualBox shared folder for,
   map a network drive to it
 
-![](../../res/3/6.img-8.webp)
+![](../../images/3/6.img-8.webp)
 
 - The UNC value includes a hard-coded (`nodename`)
 - The (`sharename`) portion of the UNC value is whatever value you chose earlier
@@ -61,21 +61,21 @@
   - `\\vboxsrv\sharename` -or-
   - `\\vboxsvr\sharename`
 
-![](../../res/3/6.img-9.webp)
+![](../../images/3/6.img-9.webp)
 
 - You now have a network drive mapping out to a folder located on the Host OS
 - Folders and files can now be copied from the Guest OS out to the Host OS, or
   into the Guest OS
 - The copy process (either way) is performed solely from within the Guest OS
 
-![](../../res/3/6.img-10.webp)
+![](../../images/3/6.img-10.webp)
 
 ## Removing a Mapped Network Drive
 
 - If access to the Oracle VirtualBox shared folder is no longer required,
   disconnect the drive mapping
 
-![](../../res/3/6.img-11.webp)
+![](../../images/3/6.img-11.webp)
 
 ## Removing a Shared Folder
 
@@ -84,11 +84,11 @@
 - Return to the Oracle VirtualBox Shared Folder icon
 - Select the shared folder you wish to remove, and click on the remove icon
 
-![](../../res/3/6.img-12.webp)
+![](../../images/3/6.img-12.webp)
 
 - The Oracle VirtualBox shared folder has been successfully removed
 
-![](../../res/3/6.img-13.webp)
+![](../../images/3/6.img-13.webp)
 
 - All problems occurring with the Oracle VirtualBox Shared Folders feature, are
   caused by users not paying attention to the share name they create
@@ -97,4 +97,4 @@
 - Likewise, not remembering the share name value for the shared folder will also
   cause problems when you go to map a network drive to it
 
-![](../../res/3/6.img-14.webp)
+![](../../images/3/6.img-14.webp)
