--- a/pages/3/7.md
+++ b/pages/3/7.md
@@ -86,36 +86,36 @@
 - SAM-based user accounts are maintained with the (Computer Management) applet,
   located under (Control Panel), and below (Administrative Tools)
 
-![](../../res/3/7.img-1.webp)
+![](../../images/3/7.img-1.webp)
 
 - Below the (Local Users and Groups - Users) node, right-click and select (New
   User, ) to create a new SAM-based user account on the Guest OS
 
-![](../../res/3/7.img-2.webp)
+![](../../images/3/7.img-2.webp)
 
 - Fill in the user account's details, and click on the (Create) button
 - Once the user account is created, click on the (Close) button to close the
   (New User) window
 
-![](../../res/3/7.img-3.webp)
+![](../../images/3/7.img-3.webp)
 
 - A newly created SAM-based user account, with a username value of
   (`john.smith`)
 
-![](../../res/3/7.img-4.webp)
+![](../../images/3/7.img-4.webp)
 
 - To change the signed on user of a node, gracefully sign out first
 - Right-click on the Windows menu icon, and select the option to "Sign out"
 
-![](../../res/3/7.img-5.webp)
+![](../../images/3/7.img-5.webp)
 
 - Locate and click on the new user account to sign on
 
-![](../../res/3/7.img-6.webp)
+![](../../images/3/7.img-6.webp)
 
 - Enter the new user account's password
 
-![](../../res/3/7.img-7.webp)
+![](../../images/3/7.img-7.webp)
 
 - The currently signed on user account appears in the "Start Menu" on the node
 - Useful if you are signing in and out using multiple user accounts, and forget
@@ -123,14 +123,14 @@
 - Hover your mouse pointer over the profile icon to expose the current signed on
   user account
 
-![](../../res/3/7.img-8.webp)
+![](../../images/3/7.img-8.webp)
 
 ## Managing SAM User Accounts
 
 - Existing SAM-based user accounts can be deleted, or have their properties
   changed, using the (Computer Management) applet
 
-![](../../res/3/7.img-9.webp)
+![](../../images/3/7.img-9.webp)
 
 - If you delete a user account, it can never be recreated to technically be the
   exact same
@@ -142,7 +142,7 @@
 - Instead, disable user accounts which are not permitted to authenticate or use
   network resources (employees which have quit or were let go from a company)
 
-![](../../res/3/7.img-10.webp)
+![](../../images/3/7.img-10.webp)
 
 - By default, Microsoft Windows and Microsoft Windows Server nodes will
   periodically prompt every user to change their password
@@ -151,19 +151,19 @@
 - You can configure user accounts such that they will never be prompted to ever
   change their password, unless they do so explicitly
 
-![](../../res/3/7.img-11.webp)
+![](../../images/3/7.img-11.webp)
 
 - For certain user accounts, it may be desirable to never let the user change
   their password
 - A kiosk type of user account would be a good example
 
-![](../../res/3/7.img-12.webp)
+![](../../images/3/7.img-12.webp)
 
 - If an employee of a company quits (or gets let go), it is always recommended
   to disable their account indefinitely, and not delete their account
 
-![](../../res/3/7.img-13.webp)
+![](../../images/3/7.img-13.webp)
 
 - User accounts that are disabled, will not be listed on the "Sign-on Screen"
 
-![](../../res/3/7.img-14.webp)
+![](../../images/3/7.img-14.webp)
