--- a/pages/4/2.md
+++ b/pages/4/2.md
@@ -10,19 +10,19 @@
 
 - Launch the "Server Manager" application
 
-![](../../res/4/2.img-1.webp)
+![](../../images/4/2.img-1.webp)
 
 - From the "Server Manager" application, run the "Add Roles and Features" wizard
 
-![](../../res/4/2.img-2.webp)
+![](../../images/4/2.img-2.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-3.webp)
+![](../../images/4/2.img-3.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-4.webp)
+![](../../images/4/2.img-4.webp)
 
 - In a larger network environment, there would be many more "server" nodes
   listed here
@@ -32,53 +32,53 @@
   on remote nodes
 - Click on the "Next" button
 
-![](../../res/4/2.img-5.webp)
+![](../../images/4/2.img-5.webp)
 
 - Enable the "DNS Server" server role. An additional window will appear, asking
   if you wish to add the dependent features for the "DNS Server" server role
 - As it is with most software applications, there is a reliance on several
   software dependencies, before the application can run successfully
 
-![](../../res/4/2.img-6.webp)
+![](../../images/4/2.img-6.webp)
 
 - Confirm the software dependencies for the "DNS Server" server role you are
   adding to the node
 
-![](../../res/4/2.img-7.webp)
+![](../../images/4/2.img-7.webp)
 
 - Add the "Active Directory Domain Services" server role to the node
 
-![](../../res/4/2.img-8.webp)
+![](../../images/4/2.img-8.webp)
 
 - Confirm the software dependencies for the "Active Directory Domain Services"
   server role you are adding to the node
 
-![](../../res/4/2.img-9.webp)
+![](../../images/4/2.img-9.webp)
 
 - With both server roles now selected, click on the "Next" button
 
-![](../../res/4/2.img-10.webp)
+![](../../images/4/2.img-10.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-11.webp)
+![](../../images/4/2.img-11.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-12.webp)
+![](../../images/4/2.img-12.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-13.webp)
+![](../../images/4/2.img-13.webp)
 
 - At the summary screen, click on the "Install" button
 
-![](../../res/4/2.img-14.webp)
+![](../../images/4/2.img-14.webp)
 
 - The installation process begins
 - Wait until it completes
 
-![](../../res/4/2.img-15.webp)
+![](../../images/4/2.img-15.webp)
 
 - Once the installation has completed, both the "DNS Server" and "Active
   Directory Domain Services" server roles have been installed on the node
@@ -86,7 +86,7 @@
   Domain Controller
 - Therefore, the SAM database for this node still exists
 
-![](../../res/4/2.img-16.webp)
+![](../../images/4/2.img-16.webp)
 
 ## Domain Controller Promotion
 
@@ -95,7 +95,7 @@
 - Click on the (1) message which does NOT require you to perform any additional
   actions, and delete the message
 
-![](../../res/4/2.img-17.webp)
+![](../../images/4/2.img-17.webp)
 
 - Within the remaining message, there is an action hyperlink
 - Clicking on it will launch the (AD DS) Configuration wizard
@@ -103,14 +103,14 @@
   to an Active Directory Domain Controller
 - Click on this hyperlink
 
-![](../../res/4/2.img-18.webp)
+![](../../images/4/2.img-18.webp)
 
 - Type in the name of your new Active Directory Forest and root domain
 - They are one the same
 - The name you used should include your personal 9-digit number in place of the
   sample one here (e.g. ad000123456a.com)
 
-![](../../res/4/2.img-19.webp)
+![](../../images/4/2.img-19.webp)
 
 - If your network environment has been kept up to date, then the highest
   possible forest and domain functional level should be used
@@ -122,11 +122,11 @@
   administrative password
 - Set the password to (Adm1np&ss), and click on the "Next" button
 
-![](../../res/4/2.img-20.webp)
+![](../../images/4/2.img-20.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-21.webp)
+![](../../images/4/2.img-21.webp)
 
 - Automatically, a NetBIOS name will be generated for your Active Directory
   domain, based on the value you typed earlier (e.g. ad000123456a.com)
@@ -134,24 +134,24 @@
   your network environment
 - Click on the "Next" button
 
-![](../../res/4/2.img-22.webp)
+![](../../images/4/2.img-22.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-23.webp)
+![](../../images/4/2.img-23.webp)
 
 - Click on the "Next" button
 
-![](../../res/4/2.img-24.webp)
+![](../../images/4/2.img-24.webp)
 
 - Click on the "Install" button to promote this "server" node to an Active
   Directory Domain Controller
 
-![](../../res/4/2.img-25.webp)
+![](../../images/4/2.img-25.webp)
 
 - To complete the promotion process, the node needs to be restarted
 
-![](../../res/4/2.img-26.webp)
+![](../../images/4/2.img-26.webp)
 
 - Once restarted, the Active Directory service will be available in your network
   environment
@@ -166,13 +166,13 @@
 - Click on the (Other User) option and type in the UPN value for the domain
   (Administrator) user account
 
-![](../../res/4/2.img-27.webp)
+![](../../images/4/2.img-27.webp)
 
 - Type in the newer UPN reference for the domain (Administrator) user account
   (e.g. administrator@ad000123456a.com), and sign on to this node as the new
   Active Directory Domain Administrator user
 
-![](../../res/4/2.img-28.webp)
+![](../../images/4/2.img-28.webp)
 
 ## Active Directory User Accounts
 
@@ -180,13 +180,13 @@
   Directory Users and Computers" (ADUC)
 - Locate the icon for the app in the "Start Menu", and click on it
 
-![](../../res/4/2.img-29.webp)
+![](../../images/4/2.img-29.webp)
 
 - This is the root of your new Active Directory domain
 - It is expandable to reveal containers (folders and organizational units), user
   accounts, security groups, etc
 
-![](../../res/4/2.img-30.webp)
+![](../../images/4/2.img-30.webp)
 
 - New user accounts should be organized appropriately, so that you are able to
   find and manage them properly
@@ -196,32 +196,32 @@
   organizational unit container object immediately below the root of this Active
   Directory domain
 
-![](../../res/4/2.img-31.webp)
+![](../../images/4/2.img-31.webp)
 
 - Organizational units typically have names which reflect the type of objects
   (e.g. user accounts, security groups, etc.) that are located below them
 
-![](../../res/4/2.img-32.webp)
+![](../../images/4/2.img-32.webp)
 
 - Right-clicking on an organizational unit object will allow you to create other
   objects immediately below the organizational unit
 
-![](../../res/4/2.img-33.webp)
+![](../../images/4/2.img-33.webp)
 
 - Creating a new Active Directory user account
 - The combination of (A) and (B) comprise the user account's UPN reference
 - Both (C) and (D) are only used for older operating systems, or software which
   has not been updated
 
-![](../../res/4/2.img-34.webp)
+![](../../images/4/2.img-34.webp)
 
 - Add a password for the new user account
 
-![](../../res/4/2.img-35.webp)
+![](../../images/4/2.img-35.webp)
 
 - Complete the Active Directory new user account creation process
 
-![](../../res/4/2.img-36.webp)
+![](../../images/4/2.img-36.webp)
 
 - Here, the new Active Directory user account (`john.smith`) was created below
   the (Sales Department) organizational unit
@@ -230,7 +230,7 @@
 - Therefore, the UPN reference this user will use when authenticating to the
   network is (`john.smith@ad000123456a.com`)
 
-![](../../res/4/2.img-37.webp)
+![](../../images/4/2.img-37.webp)
 
 ## Active Directory Integration with DNS
 
@@ -240,7 +240,7 @@
 - To get a quick look at the DNS interface, locate and click on the "DNS
   Manager" app
 
-![](../../res/4/2.img-38.webp)
+![](../../images/4/2.img-38.webp)
 
 - Expand the structure to reveal the forward lookup zone for your new DNS domain
   namespace (e.g. ad000123456a.com)
@@ -253,4 +253,4 @@
 - The item identified by (B) is a DNS entry which is used to resolve this
   hostname and its FQDN to an IP address, like when you use the (ping) utility
 
-![](../../res/4/2.img-39.webp)
+![](../../images/4/2.img-39.webp)
