--- a/pages/4/3.md
+++ b/pages/4/3.md
@@ -17,20 +17,20 @@
 - If this is not properly configured, then you will not be able to add this node
   as a member of the Active Directory environment
 
-![](../../res/4/3.img-1.webp)
+![](../../images/4/3.img-1.webp)
 
 - To make this node a member of Active Directory, go to the (Control Panel -
   System) applet
 
-![](../../res/4/3.img-2.webp)
+![](../../images/4/3.img-2.webp)
 
 - Click on the "Change Settings" hyperlink
 
-![](../../res/4/3.img-3.webp)
+![](../../images/4/3.img-3.webp)
 
 - Click on the "Change" button
 
-![](../../res/4/3.img-4.webp)
+![](../../images/4/3.img-4.webp)
 
 - Type in the name of the Active Directory domain you would like this node to be
   a member of (e.g. `ad000123456a.com`)
@@ -38,14 +38,14 @@
   associated with only (1) Active Directory domain
 - Click on the "OK" button when finished
 
-![](../../res/4/3.img-5.webp)
+![](../../images/4/3.img-5.webp)
 
 - Type in the existing Active Directory user account security credentials to
   complete the process
 - This existing account must have the privileges to add a computer as a member
   of the Active Directory domain
 
-![](../../res/4/3.img-6.webp)
+![](../../images/4/3.img-6.webp)
 
 - If you don't receive a message similar to this, then there is a problem
   - Was the DNS server IP address typed in correctly on this node?
@@ -53,22 +53,22 @@
     beforehand?
   - Did you misspell the Administrator's UPN value and/or password?
 
-![](../../res/4/3.img-7.webp)
+![](../../images/4/3.img-7.webp)
 
 - Adding a node as a member to the Active Directory environment, or removing
   them as a member, both require a restart of the node, before the setting
   change becomes effective
 
-![](../../res/4/3.img-8.webp)
+![](../../images/4/3.img-8.webp)
 
 - Once the node is a member of the Active Directory environment, authentication
   can occur for the user accounts within Active Directory
 - Click on the "Other User" option
 
-![](../../res/4/3.img-9.webp)
+![](../../images/4/3.img-9.webp)
 
 - Type in the UPN value for an Active Directory user account, along with the
   associated password to sign on
 - Active Directory authentication complete
 
-![](../../res/4/3.img-10.webp)
+![](../../images/4/3.img-10.webp)
