--- a/pages/4/5.md
+++ b/pages/4/5.md
@@ -7,7 +7,7 @@
 - You may need to manually refresh this dashboard if you have just restarted the
   node, or else you might see the colour "red", and panic prematurely
 
-![](../../res/4/5.img-1.webp)
+![](../../images/4/5.img-1.webp)
 
 - Some events which can produce the colour "red" in the "Server Manager"
   application can safely be ignored
@@ -20,30 +20,30 @@
   automatically, thereby reducing the amount of "red" that appears in this
   application
 
-![](../../res/4/5.img-2.webp)
+![](../../images/4/5.img-2.webp)
 
 - The "Add Roles and Features" wizard can be used to check which server roles
   have been installed on the node
 - Clicking on the "Cancel" button will close the wizard without modifying the
   node
 
-![](../../res/4/5.img-3.webp)
+![](../../images/4/5.img-3.webp)
 
 - You will install and work with the DNS, DHCP, and Web Server (IIS) server
   roles
 
-![](../../res/4/5.img-4.webp)
+![](../../images/4/5.img-4.webp)
 
 - To check the status of the services on the node, go to the (Control Panel -
   Administrative Tools - Services) applet
 
-![](../../res/4/5.img-5.webp)
+![](../../images/4/5.img-5.webp)
 
 - Services states are displayed in the "Status" column
 - A status of "Running" indicates that the underlying software for a service has
   started on the node
 
-![](../../res/4/5.img-6.webp)
+![](../../images/4/5.img-6.webp)
 
 ## Service Status Values
 
@@ -79,18 +79,18 @@
 - This way, you can quickly see if all services which are configured to
   "Automatically" startup, are in a "Running" state
 
-![](../../res/4/5.img-7.webp)
+![](../../images/4/5.img-7.webp)
 
 - Once a node has been started, all services configured for an "Automatic"
   startup type should be in a "Running" state
 - If one or more of these services are not, it indicates there is a problem with
   these services
 
-![](../../res/4/5.img-8.webp)
+![](../../images/4/5.img-8.webp)
 
 - Here, the (Print Spooler) service has not started properly
 
-![](../../res/4/5.img-9.webp)
+![](../../images/4/5.img-9.webp)
 
 - Right-click on the non-started service, and manually attempt to start it
 - If it starts, then there was probably just a timing issue
@@ -98,7 +98,7 @@
   get an indication as to why it did not start, and then go about fixing the
   problem
 
-![](../../res/4/5.img-10.webp)
+![](../../images/4/5.img-10.webp)
 
 ## Virtualization and Services
 
