--- a/pages/5/1.md
+++ b/pages/5/1.md
@@ -207,53 +207,23 @@
   information will be provided
 - For example:
 
-```
+```console
  ~ % ls -la
 total 160
 drwxr-x---+  41 john.smith  staff   1312 Feb  7 23:51 .
 drwxr-xr-x    5 root        admin    160 Feb  6 01:51 ..
 drwx------@  23 john.smith  staff    736 Feb 10 21:55 .Trash
-drwxr-xr-x@  15 john.smith  staff    480 Jan  1 20:41 .android
-drwxr-xr-x    4 john.smith  staff    128 Dec 16 20:31 .cache
-drwxr-xr-x@   3 john.smith  staff     96 Oct 31 00:11 .cocoapods
-drwxr-xr-x    5 john.smith  staff    160 Dec 16 20:40 .config
-drwxr-xr-x@   5 john.smith  staff    160 Dec 16 22:54 .dart
-drwxr-xr-x@   5 john.smith  staff    160 Dec 17 00:57 .dartServer
-drwxr-xr-x    3 john.smith  staff     96 Nov 25 18:51 .deno
-drwxr-xr-x@  11 john.smith  staff    352 Jan  1 19:54 .developer
--rw-------@   1 john.smith  staff     16 Jan  1 00:18 .emulator_console_auth_token
--rw-r--r--    1 john.smith  staff     78 Dec 16 20:41 .flutter
--rw-r--r--@   1 john.smith  staff    190 Oct 29 16:25 .gitconfig
-drwxr-xr-x@  17 john.smith  staff    544 Dec 30 20:48 .gradle
-drwxr-xr-x@   3 john.smith  staff     96 Dec 16 16:54 .hawtjni
-drwxr-xr-x@   3 john.smith  staff     96 Dec 31 19:19 .javacpp
-drwxr-xr-x@   6 john.smith  staff    192 Dec 16 20:22 .konan
--rw-------    1 john.smith  staff     20 Jan 25 10:23 .lesshst
-drwxr-xr-x@   3 john.smith  staff     96 Dec 16 19:15 .local
-drwxr-xr-x@   3 john.smith  staff     96 Oct 30 01:07 .m2
-drwxr-xr-x    4 john.smith  staff    128 Feb  7 22:02 .npm
-drwxr-xr-x   31 john.smith  staff    992 Feb  7 22:02 .nvm
-drwxr-xr-x    8 john.smith  staff    256 Jan 25 10:44 .pub-cache
-drwxr-xr-x   23 john.smith  staff    736 Nov  6 02:16 .rbenv
-drwxr-xr-x    5 john.smith  staff    160 Jan  2 02:06 .swiftpm
-drwxr-xr-x@   5 john.smith  staff    160 Dec 16 20:23 .vscode
--rw-r--r--@   1 john.smith  staff  47799 Feb  7 23:51 .zcompdump
-lrwxr-xr-x    1 john.smith  staff     17 Dec 17 00:13 .zshrc -> .developer/.zshrc
-drwx------@   5 john.smith  staff    160 Oct 29 17:12 Applications
 drwx------@   4 john.smith  staff    128 Jan  1 20:41 Desktop
 drwxr-xr-x    6 john.smith  staff    192 Jan 25 10:25 Developer
 drwx------@   4 john.smith  staff    128 Feb  9 20:10 Documents
 drwx------@   5 john.smith  staff    160 Feb 10 22:50 Downloads
-drwx------@ 103 john.smith  staff   3296 Feb 10 05:25 Library
-drwx------    5 john.smith  staff    160 Feb  7 23:05 Movies
-drwx------+   5 john.smith  staff    160 Feb  7 23:37 Music
-drwx------+   6 john.smith  staff    192 Feb  7 23:30 Pictures
 drwxr-xr-x+   4 john.smith  staff    128 Oct 29 01:29 Public
+...
 ```
 
 - File and Directory Details
 
-```
+```console
 -rw-r-xr-w. 1 john.smith john.smith 4096 Jan 24 15:24 MyResume.docx
 drwxrwxr-w. 4 john.smith john.smith   37 Feb 15 21:06 My Data
 ```
@@ -266,7 +236,7 @@ drwxrwxr-w. 4 john.smith john.smith   37 Feb 15 21:06 My Data
 - The (`clear`) utility is used to clear the contents of the console
 - Reduces clutter build up on the screen
 
-```
+```console
 $ clear
 ```
 
@@ -277,7 +247,7 @@ $ clear
 - If multiple users are concurrently signed on to the node, then a complete list
   of all signed on users will appear
 
-```
+```console
 $ who
 ```
 
@@ -285,7 +255,7 @@ $ who
 
 - The (`cd`) utility is used to change your current directory context
 
-```
+```console
 # Change my directory context to my home directory
 $ cd
 
@@ -322,7 +292,7 @@ $ cd ../../..
 - The (`pwd`) utility is used to identify your current directory context on the
   filesystem (which directory you are currently in)
 
-```
+```console
 $ pwd
 ```
 
@@ -330,7 +300,7 @@ $ pwd
 
 - The (`ls`) utility is used to perform a directory listing
 
-```
+```console
 # List all the non-hidden files and directories located at my current directory context
 $ ls
 
@@ -350,7 +320,7 @@ $ ls -a -l (or) $ ls -al (or) $ ls -la
 
 - The (`touch`) utility is used to create a new (empty) file
 
-```
+```console
 # Create a new empty file at my current directory context
 $ touch File-01.txt (or) $ touch ./File-01.txt
 
@@ -365,7 +335,7 @@ $ touch "../../My Resume.docx"
 
 - The (`mkdir`) utility is used to create a new empty directory
 
-```
+```console
 # Create a new directory at my current directory context
 $ mkdir MyData
 
@@ -384,7 +354,7 @@ $ mkdir "../../../My Data Files/Budgets"
 - The (`cp`) utility is used to copy a file or directory structure to a new
   location on the filesystem
 
-```
+```console
 # Make a copy of a file
 # The existing file (File-01.txt) is located at my current directory context
 # The new file (File-02.txt) will be created at my current directory context
@@ -413,7 +383,7 @@ $ cp -R "My Data" "../My Backups"
 - The (`mv`) utility is also used to rename an existing file or directory from
   one name to another
 
-```
+```console
 # Rename the existing file (File-01.txt) at my current directory context to (File-02.txt)
 $ mv ./File-01.txt ./File-02.txt
 
@@ -426,7 +396,7 @@ $ mv ./File-01.txt "../../My Data Files"
 
 - The (`rm`) utility is used to delete an existing file
 
-```
+```console
 # Delete a file at my current directory context
 $ rm "./Budget Presentation.pptx"
 
@@ -438,7 +408,7 @@ $ rm "../../../Budgets/Budget Presentation.pptx"
 
 - The (`rmdir`) utility is used to delete an existing empty directory
 
-```
+```console
 # Delete a directory at my current directory context
 $ rmdir Budgets
 
@@ -453,7 +423,7 @@ $ rmdir "../../Copies of Resumes"
 - With the thousands of files and directories on a UNIX or UNIX "like" node, the
   (`find`) utility is one of the most important utilities you could master
 
-```
+```console
 # Locate all files ending with (.conf) on the entire node (all filesystems)
 # Display any access error messages
 # -iname: Any case for the file or directory name (case insensitive)
