--- a/pages/5/2.md
+++ b/pages/5/2.md
@@ -23,19 +23,19 @@
 
 1. Launch the (Settings) applet, to add new local user accounts to this node
 
-![](../../res/5/2.img-1.webp)
+![](../../images/5/2.img-1.webp)
 
 2. Click on the (Details) settings applet option
 
-![](../../res/5/2.img-2.webp)
+![](../../images/5/2.img-2.webp)
 
 3. Click on the (Users) settings applet option
 
-![](../../res/5/2.img-3.webp)
+![](../../images/5/2.img-3.webp)
 
 4. Click on the (Add User...) button to add a new user account
 
-![](../../res/5/2.img-4.webp)
+![](../../images/5/2.img-4.webp)
 
 5. Complete the details for a new "Standard" (regular) user account, and click
    on the "Add" button
@@ -43,25 +43,25 @@
 - Additional administrative user accounts can also be created by selecting the
   respective "Account Type"
 
-![](../../res/5/2.img-5.webp)
+![](../../images/5/2.img-5.webp)
 
 6. Log out of the node as the current user, in order to test the new user
    account
 
-![](../../res/5/2.img-6.webp)
+![](../../images/5/2.img-6.webp)
 
 7. Click "Logout"
 
-![](../../res/5/2.img-7.webp)
+![](../../images/5/2.img-7.webp)
 
 8. If the new user account appears on the sign on screen, select it
 
 - If it does not appear, then click on the "Not listed?" option to sign on to
   the node
 
-![](../../res/5/2.img-8.webp)
+![](../../images/5/2.img-8.webp)
 
 9. Type in the password for the new user account, and click on the "Sign In"
    button
 
-![](../../res/5/2.img-9.webp)
+![](../../images/5/2.img-9.webp)
