--- a/pages/5/3.md
+++ b/pages/5/3.md
@@ -15,14 +15,14 @@
 
 - Be careful, as a UNIX or UNIX "like" environment is case sensitive
 
-```
+```console
 [root@ol000123456a ~]# vim /etc/hosts
 ```
 
 2. Using the arrow keys on the keyboard, go to the last possible cursor position
    in the file
 
-```
+```console
 127.0.0.1   localhost localhost.localdomain localhost4 localhost4. localdomain4
 ::1         localhost localhost.localdomain localhost6 localhost6. localdomain6
 ```
@@ -34,10 +34,9 @@
   `<Enter>` key a few times
 - This will create a few blank lines so you can add some new text to this file
 
-```
+```console
 127.0.0.1   localhost localhost.localdomain localhost4 localhost4. localdomain4
 ::1         localhost localhost.localdomain localhost6 localhost6. localdomain6
-~
 ~
 ~
 -- INSERT --
@@ -51,7 +50,7 @@
 - This is what the (`ping`) utility will use later on to resolve each hostname
   to its associated IPv4 address
 
-```
+```console
 127.0.0.1   localhost localhost.localdomain localhost4 localhost4. localdomain4
 ::1         localhost localhost.localdomain localhost6 localhost6. localdomain6
 
@@ -73,7 +72,7 @@
   press the `<Enter>` key
 - Changes to the file have now been aborted
 
-```
+```console
 127.0.0.1   localhost localhost.localdomain localhost4 localhost4. localdomain4
 ::1         localhost localhost.localdomain localhost6 localhost6. localdomain6
 
@@ -87,7 +86,7 @@
 6. Use the (`ping`) utility to verify hostname values are being resolved locally
    to their correct IPv4 addresses
 
-```
+```console
 [root@ol000123456a ~]# ping ol000123456a
 PING 01000123456a (10.1.1.10) 56(84) bytes of data.
 64 bytes from ol000123456a (10.1.1.10): imp seq=1 ttl=64 time=0.075 ms
