--- a/pages/5/5.md
+++ b/pages/5/5.md
@@ -20,14 +20,14 @@
 
 - Then, click on "Shared Folders Settings..."
 
-```
+```console
 [john. smith@ol000123456a ~ J$ who
 john. smith tty2          2019-08-27 11:46 (tty2)
 ```
 
 2. Click on the add new shared folder icon
 
-![](../../res/5/5.img-2.webp)
+![](../../images/5/5.img-2.webp)
 
 3. Click on the (Folder Path) arrow, and select which folder on your Host OS
    will be "shared" to this Guest OS
@@ -37,7 +37,7 @@ john. smith tty2          2019-08-27 11:46 (tty2)
 - If you have multiple Guest OSes running, you would need to perform a similar
   process for each of them (if required)
 
-![](../../res/5/5.img-3.webp)
+![](../../images/5/5.img-3.webp)
 
 4. Here, I wish to share the "Windows" folder currently located on my portable
    USB-powered storage device which is attached to my Host OS
@@ -47,14 +47,14 @@ john. smith tty2          2019-08-27 11:46 (tty2)
 - Using the Oracle VirtualBox Shared Folders feature is a great way of
   transferring files between a Guest OS and the Host OS
 
-![](../../res/5/5.img-4.webp)
+![](../../images/5/5.img-4.webp)
 
 5. By default, the share name (a.k.a. Folder Name) will inherit the (Folder
    Path's) folder name
 
 - Most of the time, this is not ideal
 
-![](../../res/5/5.img-5.webp)
+![](../../images/5/5.img-5.webp)
 
 6. Type in a share name value that is relatively short, and contains no
    `<space>` characters, symbol characters, etc
@@ -62,19 +62,19 @@ john. smith tty2          2019-08-27 11:46 (tty2)
 - The value should be unique to this Guest OS, and something that you can easily
   remember
 
-![](../../res/5/5.img-6.webp)
+![](../../images/5/5.img-6.webp)
 
 7. Once the shared folder has been created for the Guest OS, click on the (OK)
    button to complete the process
 
-![](../../res/5/5.img-7.webp)
+![](../../images/5/5.img-7.webp)
 
 ## Mounting a Shared Folder
 
 8. From within the Guest OS you created an Oracle VirtualBox shared folder for,
    identify your current filesystem context
 
-```
+```console
 [root@ol000123456a ~]# pwd
 /root
 [root@ol000123456a ~]#
@@ -85,7 +85,7 @@ john. smith tty2          2019-08-27 11:46 (tty2)
 - On UNIX and UNIX "like" nodes, physical disks and shared folders, get
   "mounted" into separate directories
 
-```
+```console
 [root@ol000123456a ~]# mkdir MyHostShare
 ```
 
@@ -100,7 +100,7 @@ john. smith tty2          2019-08-27 11:46 (tty2)
   where the Host OS' shared folder has been mounted to (made available to this
   node)
 
-```
+```console
 [root@ol000123456a ~]# mount -t vboxsf MyData MyHostShare
 [root@ol000123456a ~]#
 ```
@@ -113,7 +113,7 @@ john. smith tty2          2019-08-27 11:46 (tty2)
   OS
 - The copy process (either way) is performed solely from within the Guest OS
 
-```
+```console
 [root@ol000123456a ~]# ls - la . /MyHostShare
 total 4
 drwxrwxrwx.     1 root root    O Dec  8 20:18 .
@@ -130,7 +130,7 @@ drwxrwxrwx.     1 root root    0 Jan 30 20:19 10
 - Make sure that the shared folder is not being used in any way on the Guest OS
 - Make sure that your directory context is not somewhere below the mountpoint
 
-```
+```console
 [root@ol000123456a ~]# umount MyData
 [root@ol000123456a ~]#
 ```
@@ -138,7 +138,7 @@ drwxrwxrwx.     1 root root    0 Jan 30 20:19 10
 13. Verify you are no longer able to access the remote filesystem (the Host OS'
     shared folder contents), by performing a simple directory listing
 
-```
+```console
 [root@ol000123456a ~]# ls - la . /MyHostShare
 total 4
 drwxrwxrwx.     1 root root    O Dec  8 20:18 .
@@ -154,11 +154,11 @@ dr-xr-x---.    16 root root 4096 Aug 27 13:00 ..
 - Return to the Oracle VirtualBox Shared Folder icon
 - Select the shared folder you wish to remove, and click on the remove icon
 
-![](../../res/5/5.img-14.webp)
+![](../../images/5/5.img-14.webp)
 
 15. The Oracle VirtualBox shared folder has been successfully removed
 
-![](../../res/5/5.img-15.webp)
+![](../../images/5/5.img-15.webp)
 
 ## Typical Problems
 
@@ -170,4 +170,4 @@ dr-xr-x---.    16 root root 4096 Aug 27 13:00 ..
 - Likewise, not remembering the share name value for the shared folder will also
   cause problems when you go to map a network drive to it
 
-![](../../res/5/5.img-16.webp)
+![](../../images/5/5.img-16.webp)
