--- a/pages/5/6.md
+++ b/pages/5/6.md
@@ -94,11 +94,18 @@
 
 - Ensure you use only commands to complete this task (directories; files)
 
-```md
-├── MyData/ │ ├── Spreadsheets/ │ │ ├── Current Budget.xlsx │ ├── Documents/ │ │
-├── Resume - Smith.docx │ ├── Image Files/ │ │ ├── Image-01.webp │ │ ├──
-Image-02.webp │ ├── Text Files/ │ │ ├── Meeting Notes/ │ │ │ ├── Minutes from
-Meeting - Jan 24.txt
+```console
+├── MyData/
+│   ├── Spreadsheets/
+│   │   ├── Current Budget.xlsx
+│   ├── Documents/
+│   │   ├── Resume - Smith.docx
+│   ├── Image Files/
+│   │   ├── Image-01.webp
+│   │   ├── Image-02.webp
+│   ├── Text Files/
+│   │   ├── Meeting Notes/
+│   │   │   ├── Minutes from Meeting - Jan 24.txt
 ```
 
 11. As user (`Anna Taylor`), create the following directory structure and files,
@@ -106,7 +113,7 @@ Meeting - Jan 24.txt
 
 - Ensure you use only commands to complete this task (directories; files)
 
-```
+```console
 ├── MyData/
 │   ├── Spreadsheets/
 │   │   ├── Current Budget.xlsx
