--- a/pages/6/2.md
+++ b/pages/6/2.md
@@ -20,15 +20,15 @@
 - Click on the "Advanced" button to add additional IP addresses for the node's
   network adapter
 
-![](../../res/6/2.img-1.webp)
+![](../../images/6/2.img-1.webp)
 
 2. Click on the "Add..." button
 
-![](../../res/6/2.img-2.webp)
+![](../../images/6/2.img-2.webp)
 
 3. ype in an the additional IP address settings, then click on the "Add" button
 
-![](../../res/6/2.img-3.webp)
+![](../../images/6/2.img-3.webp)
 
 4. All IP address (and associated subnet mask) values will be listed here
 
@@ -36,12 +36,12 @@
   network adapter
 - Save the setting changes to complete the binding process
 
-![](../../res/6/2.img-4.webp)
+![](../../images/6/2.img-4.webp)
 
 5. The (ping) utility is used to verify that the node is responsive to all of
    the IP addresses that are bound to it's network adapters
 
-```
+```console
 PS C:\Users\Administrator> ping 10.0.10.20
 
 Pinging 10.0.10.20 with 32 bytes of data:
