--- a/pages/6/4.md
+++ b/pages/6/4.md
@@ -20,7 +20,7 @@
 
 1. The "DNS Manager" interface is used to manage all aspects of a DNS server
 
-![](../../res/6/4.img-1.webp)
+![](../../images/6/4.img-1.webp)
 
 2. Reverse lookup zones are responsible for converting IP addresses to their
    associated hostname and FQDN values
@@ -32,7 +32,7 @@
   environment, and BEFORE any additional forward lookup zones or resource
   records are created
 
-![](../../res/6/4.img-2.webp)
+![](../../images/6/4.img-2.webp)
 
 3. Right-click on the reverse lookup zone folder, and select the "New Zone..."
    option
@@ -40,53 +40,53 @@
 - This will launch the "New Zone" wizard, which will step you through the
   process of creating a new reverse lookup zone
 
-![](../../res/6/4.img-3.webp)
+![](../../images/6/4.img-3.webp)
 
 4. Most of the settings throughout the "New Zone" wizard, you can keep the
    default settings
 
-![](../../res/6/4.img-4.webp)
+![](../../images/6/4.img-4.webp)
 
 5. Click "Next"
 
-![](../../res/6/4.img-5.webp)
+![](../../images/6/4.img-5.webp)
 
 6. Click "Next"
 
-![](../../res/6/4.img-6.webp)
+![](../../images/6/4.img-6.webp)
 
 7. Click "Next"
 
-![](../../res/6/4.img-7.webp)
+![](../../images/6/4.img-7.webp)
 
 8. This is the most important setting
 
 - Here is where you identify your IP network
 - The IP network is used to create a special reverse lookup zone name
 
-![](../../res/6/4.img-8.webp)
+![](../../images/6/4.img-8.webp)
 
 9. Here for example, a reverse lookup zone is being created for the IP network
    (10.0.10.h)
 
 - We don't use the host portion for the reverse lookup zone name
 
-![](../../res/6/4.img-9.webp)
+![](../../images/6/4.img-9.webp)
 
 10. Click "Next"
 
-![](../../res/6/4.img-10.webp)
+![](../../images/6/4.img-10.webp)
 
 11. Click "Finish"
 
-![](../../res/6/4.img-11.webp)
+![](../../images/6/4.img-11.webp)
 
 12. Here, a total of (4) reverse lookup zones have been created
 
 - One for each IP network in our network environment that we, as an
   administrator, are responsible for
 
-![](../../res/6/4.img-12.webp)
+![](../../images/6/4.img-12.webp)
 
 13. Each newly created reverse lookup zone comes with a couple of default
     resource records
@@ -103,7 +103,7 @@
   they don't have to manually look them up, making it easier to identify which
   host on the network accessed a server
 
-![](../../res/6/4.img-13.webp)
+![](../../images/6/4.img-13.webp)
 
 ## Forward Lookup Zones
 
@@ -117,7 +117,7 @@
 - If you are responsible for managing multiple DNS namespaces, then you will
   need to create a forward lookup zone for each of those DNS namespaces
 
-![](../../res/6/4.img-14.webp)
+![](../../images/6/4.img-14.webp)
 
 15. Right-click on the forward lookup zone folder, and select the "New Zone..."
     option
@@ -125,47 +125,47 @@
 - This will launch the "New Zone" wizard, which will step you through the
   process of creating a new forward lookup zone
 
-![](../../res/6/4.img-15.webp)
+![](../../images/6/4.img-15.webp)
 
 16. Most of the settings throughout the "New Zone" wizard, you can keep the
     default settings
 
-![](../../res/6/4.img-16.webp)
+![](../../images/6/4.img-16.webp)
 
 17. Click "Next"
 
-![](../../res/6/4.img-17.webp)
+![](../../images/6/4.img-17.webp)
 
 18. Click "Next"
 
-![](../../res/6/4.img-18.webp)
+![](../../images/6/4.img-18.webp)
 
 19. This is the most important setting
 
 - Here is where you identify your DNS namespace
 - The DNS namespace is used to create a special forward lookup zone name
 
-![](../../res/6/4.img-19.webp)
+![](../../images/6/4.img-19.webp)
 
 20. Here for example, a forward lookup zone is being created for the DNS
     namespace (`pet-rescue.org`)
 
-![](../../res/6/4.img-20.webp)
+![](../../images/6/4.img-20.webp)
 
 21. Click "Next"
 
-![](../../res/6/4.img-21.webp)
+![](../../images/6/4.img-21.webp)
 
 22. Click "Finish"
 
-![](../../res/6/4.img-22.webp)
+![](../../images/6/4.img-22.webp)
 
 23. Here, a total of (3) new forward lookup zones have been created
 
 - One for each DNS namespace that we as an administrator are responsible for
   maintaining
 
-![](../../res/6/4.img-23.webp)
+![](../../images/6/4.img-23.webp)
 
 24. Each newly created forward lookup zone comes with a couple of default
     resource records
@@ -175,7 +175,7 @@
 - The new resource records equate a hostname on the network to it's associated
   IP address
 
-![](../../res/6/4.img-24.webp)
+![](../../images/6/4.img-24.webp)
 
 ## Forward Lookup Zone Resource Records
 
@@ -197,7 +197,7 @@
 
 25. For a forward lookup zone, create a new Host (A) resource record
 
-![](../../res/6/4.img-25.webp)
+![](../../images/6/4.img-25.webp)
 
 26. The hostname portion of an FQDN value is what needs to be provided
 
@@ -209,17 +209,17 @@
 - Ensure a reverse lookup zone resource record (PTR: Pointer) is created also
   for this hostname
 
-![](../../res/6/4.img-26.webp)
+![](../../images/6/4.img-26.webp)
 
 27. Click "OK"
 
-![](../../res/6/4.img-27.webp)
+![](../../images/6/4.img-27.webp)
 
 28. Enter additional Host (A) resource records if needed
 
 - Click on the "Done" button when finished
 
-![](../../res/6/4.img-28.webp)
+![](../../images/6/4.img-28.webp)
 
 29. Here, a single new Host (A) resource record has been created
 
@@ -229,7 +229,7 @@
 - Once the client application has the IP address, it can then communicate on the
   network with the node
 
-![](../../res/6/4.img-29.webp)
+![](../../images/6/4.img-29.webp)
 
 30. Here, the associated (PTR) reverse lookup zone resource record has been
     created
@@ -240,7 +240,7 @@
 - That information, along with the original IP address, is what gets recorded in
   a log file
 
-![](../../res/6/4.img-30.webp)
+![](../../images/6/4.img-30.webp)
 
 31. Before testing to see if the new Host (A) resource record in DNS is
     resolving properly, ensure the node is configured to use the DNS server for
@@ -251,14 +251,14 @@
 - As such, it will query itself whenever hostname and FQDN values need to be
   resolved to IP addresses
 
-![](../../res/6/4.img-31.webp)
+![](../../images/6/4.img-31.webp)
 
 32. Use the (ping) utility to perform a DNS forward lookup for the FQDN value
 
 - You should receive the associated IP address for the Host (A) resource record
   you created
 
-```
+```console
 PS C: \Users\Administrator> ping www.pet-rescue.org
 
 Pinging www.pet-rescue.org [10.0.20.20] with 32 bytes of data:
@@ -286,7 +286,7 @@ PS C: \Users\Administrator>
 - As such, we need to create one or more aliases which point to this existing
   Host (A) resource record
 
-![](../../res/6/4.img-33.webp)
+![](../../images/6/4.img-33.webp)
 
 34. Provide the new hostname value, and point to the existing Host (A) reference
 
@@ -297,7 +297,7 @@ PS C: \Users\Administrator>
 - If the IP address ever changes for the (www) hostname, automatically the IP
   address for the (sales) hostname will also change to match
 
-![](../../res/6/4.img-34.webp)
+![](../../images/6/4.img-34.webp)
 
 35. Here is the new CNAME resource record, which is equated to
     (`www.pet-rescue.org`)
@@ -307,12 +307,12 @@ PS C: \Users\Administrator>
 - Therefore, both (`www.pet-rescue.org`) AND (`sales.pet-rescue.org`) will
   resolve to (`10.0.20.20`) when a forward lookup query is performed
 
-![](../../res/6/4.img-35.webp)
+![](../../images/6/4.img-35.webp)
 
 36. Test both FQDN values to ensure that the exact same IP address is resolved
     for each
 
-```
+```console
 PS C: \Users\ Administrator> ping ww.pet-rescue.org
 
 Pinging www.pet-rescue.org [10.0.20.20] with 32 bytes of data:
@@ -403,7 +403,7 @@ PS C: \Users\ Administrator>
 - As expected, no resource record exists, and therefore we do not receive any IP
   address for the host-less FQDN queried
 
-```
+```console
 PS C:\Users\Administrator> ping pet-rescue.org
 Ping request could not find host pet-rescue.org
 - Please check the name and try again.
@@ -413,20 +413,20 @@ PS C:\Users\Administrator>
 38. Host-less FQDNs cannot be created using a CNAME resource record, because it
     cannot have the new hostname field left `<empty>`
 
-![](../../res/6/4.img-38.webp)
+![](../../images/6/4.img-38.webp)
 
 39. Host (A) resource records can be used to create a host-less FQDN
 
 - Just leave the new hostname field `<empty>`
 
-![](../../res/6/4.img-39.webp)
+![](../../images/6/4.img-39.webp)
 
 40. Now, (2) Host (A) resource records exist for the exact same IP address
 
 - The (www) entry is for the host-full FQDN (`www.pet-rescue.org`)
 - The other is for the host-less FQDN (`pet-rescue.org`)
 
-![](../../res/6/4.img-40.webp)
+![](../../images/6/4.img-40.webp)
 
 41. Using the (ping) utility, test both the host-full and host-less FQDNs
 
@@ -436,7 +436,7 @@ PS C:\Users\Administrator>
   node would go out and check DNS (again) to see if it could provide an IP
   address
 
-```
+```console
 PS C:\Users\Administrator> ping pet-rescue.org
 Ping request could not find host pet-rescue.org
 - Please check the name and try again.
@@ -474,15 +474,15 @@ PS C:\Users\Administrator>
 
 42. Locate the local resolution file
 
-![](../../res/6/4.img-42.webp)
+![](../../images/6/4.img-42.webp)
 
 43. Open the local resolution file in a text editor application
 
-![](../../res/6/4.img-43.webp)
+![](../../images/6/4.img-43.webp)
 
 44. Place as many resolution entries as needed, and save the changes to the file
 
-```
+```console
 # Copyright (c) 1993-2009 Microsoft Corp.
 # This is a sample HOSTS file used by Microsoft TCP/IP for Windows.
 #
@@ -514,14 +514,14 @@ PS C:\Users\Administrator>
 - Therefore, the only way to resolve the FQDN at this point is locally, using
   the local resolution file
 
-![](../../res/6/4.img-45.webp)
+![](../../images/6/4.img-45.webp)
 
 46. Using the (`ping`) utility, check to see if you are able to resolve the FQDN
 
 - WARNING: Local resolution entries supersede anything located in the DNS
   environment
 
-```
+```console
 PS C:\Users\Administrator> ping www.xyzsports.co.uk
 
 Pinging www.xyzsports.co.uk [`10.0.40.20`] with 32 bytes of data:
