--- a/pages/7/1.md
+++ b/pages/7/1.md
@@ -14,7 +14,7 @@
 - See latest market share details
   [here](http://news.netcraft.com/archives/category/web-server-survey)
 
-![](../../res/7/1.img-1.webp)
+![](../../images/7/1.img-1.webp)
 
 ## Microsoft Internet Information Services (IIS)
 
