--- a/pages/7/2.md
+++ b/pages/7/2.md
@@ -5,7 +5,7 @@
 - The (Web Server (IIS)) server role is installed with a set of default role
   services
 
-![](../../res/7/2.img-1.webp)
+![](../../images/7/2.img-1.webp)
 
 - Default role services (Image # 1)
 - All items located below the (Web Server (IIS)) branch, are related role
@@ -13,15 +13,15 @@
 - Note, many of them are not selected by default
 - Additional role services are only enabled if they are needed
 
-![](../../res/7/2.img-2.webp)
+![](../../images/7/2.img-2.webp)
 
 - Default role services (Image # 2)
 
-![](../../res/7/2.img-3.webp)
+![](../../images/7/2.img-3.webp)
 
 - Default role services (Image # 3)
 
-![](../../res/7/2.img-4.webp)
+![](../../images/7/2.img-4.webp)
 
 ## The Default Web Site
 
@@ -38,43 +38,43 @@
 
 - Locate and launch the "IIS Manager"
 
-![](../../res/7/2.img-5.webp)
+![](../../images/7/2.img-5.webp)
 
 - Expand the hierarchy to expose the Default Web Site
 - Visually this confirms that the (1) web site exists in your environment
 
-![](../../res/7/2.img-6.webp)
+![](../../images/7/2.img-6.webp)
 
 - On a remote network node, launch the Microsoft Edge web browser application
 - This will be used to test connectivity and responsiveness of the Default Web
   Site
 
-![](../../res/7/2.img-7.webp)
+![](../../images/7/2.img-7.webp)
 
 - Forget about DNS for now, just try to access the Default Web Site using the
   primary IP address of the web server node
 - No point in dealing with any potential name resolution issues, as you only
   want to verify if the Default Web Site is accessible on the network
 
-![](../../res/7/2.img-8.webp)
+![](../../images/7/2.img-8.webp)
 
 - If all goes well, the Default Web Site's main web page will be rendered in the
   client web browser application
 - Next, you can begin creating additional web sites, and testing out their
   accessibility on the network
 
-![](../../res/7/2.img-9.webp)
+![](../../images/7/2.img-9.webp)
 
 ## Creating IP-Based Web Sites
 
 - From the (Sites) shortcut menu, select the "Add Website..." option to create a
   new web site
 
-![](../../res/7/2.img-10.webp)
+![](../../images/7/2.img-10.webp)
 
 - Fill in the new web site's attribute values (Explained over the next 2 slides)
 
-![](../../res/7/2.img-11.webp)
+![](../../images/7/2.img-11.webp)
 
 ## Web Site Attributes
 
@@ -125,20 +125,20 @@
 
 - Add website details and click "OK"
 
-![](../../res/7/2.img-12.webp)
+![](../../images/7/2.img-12.webp)
 
 - Using a web browser application, test connectivity to the new web site, using
   the host-full FQDN value
 
-![](../../res/7/2.img-13.webp)
+![](../../images/7/2.img-13.webp)
 
 - If DNS is configured with a matching host-less FQDN value, test that as well
 
-![](../../res/7/2.img-14.webp)
+![](../../images/7/2.img-14.webp)
 
 - Here, a total of (5) new IP-Based web sites have been created
 
-![](../../res/7/2.img-15.webp)
+![](../../images/7/2.img-15.webp)
 
 ## Purging the Web Browser's Cache
 
@@ -161,11 +161,11 @@
   to a web site
 - In Microsoft Edge, go to the browser's settings
 
-![](../../res/7/2.img-16.webp)
+![](../../images/7/2.img-16.webp)
 
 - Locate the area for clearing the browsing data, and click on the button
 
-![](../../res/7/2.img-17.webp)
+![](../../images/7/2.img-17.webp)
 
 - Select all of the cached components, and enable Microsoft Edge to
   automatically clear the selected cache components when the web browser is
@@ -173,7 +173,7 @@
 - Then, click on the "Clear" button to manually clear the selected cache
   components immediately
 
-![](../../res/7/2.img-18.webp)
+![](../../images/7/2.img-18.webp)
 
 ## Creating Name-Based Web Sites
 
@@ -181,14 +181,14 @@
   found in DNS
 - Unique name-based web sites share a common IP address
 
-![](../../res/7/2.img-19.webp)
+![](../../images/7/2.img-19.webp)
 
 - Name-Based web sites utilize the Host Header Name binding attribute
 - The spelling must match what DNS uses to resolve the IP address, or the
   Default Web Site will render in the client's web browser application
 
-![](../../res/7/2.img-20.webp)
+![](../../images/7/2.img-20.webp)
 
 - Here, a total of (3) new Name-Based web sites have been created
 
-![](../../res/7/2.img-21.webp)
+![](../../images/7/2.img-21.webp)
