--- a/pages/7/3.md
+++ b/pages/7/3.md
@@ -11,6 +11,6 @@
     [Microsoft SQL Server (sqlcmd)](https://docs.microsoft.com/en-us/sql/tools/sqlcmd-utility)
     CLI user interface (64 bit)
 
-![](../../res/7/3.img-1.webp)
+![](../../images/7/3.img-1.webp)
 
-![](../../res/7/3.img-2.webp)
+![](../../images/7/3.img-2.webp)
