--- a/pages/7/4.md
+++ b/pages/7/4.md
@@ -87,11 +87,11 @@
 9. On the (Microsoft Windows Server) Guest OS, create new DNS forward lookup
    zones for the following DNS namespaces
 
-   | No. | DNS Namespace         |
-   | --- | --------------------- |
-   | #1  | `pet-rescue.org`      |
-   | #2  | `creativedesigns.net` |
-   | #3  | `xyzsports.co.uk`     |
+| No. | DNS Namespace         |
+| --- | --------------------- |
+| #1  | `pet-rescue.org`      |
+| #2  | `creativedesigns.net` |
+| #3  | `xyzsports.co.uk`     |
 
 10. On the (Microsoft Windows Server) Guest OS, configure the DNS server, such
     that each of the host-full and host-less FQDNs (located on the next slide)
@@ -103,31 +103,31 @@
   of type (Host (A))
 - Some of the resource records will be of type (CNAME)
 
-  | Domain Name                     | IP Address    |
-  | ------------------------------- | ------------- |
-  | `pet-rescue.org`                | `10.10.10.50` |
-  | `www.pet-rescue.org`            | `10.10.10.50` |
-  | `adoption.pet-rescue.org`       | `10.10.10.51` |
-  | `creativedesigns.net`           | `10.10.10.52` |
-  | `www.creativedesigns.net`       | `10.10.10.52` |
-  | `catalogue.creativedesigns.net` | `10.10.10.53` |
-  | `xyzsports.co.uk`               | `10.10.10.54` |
-  | `www.xyzsports.co.uk`           | `10.10.10.54` |
-  | `equipment.xyzsports.co.uk`     | `10.10.10.55` |
-  | `purchase.xyzsports.co.uk`      | `10.10.10.55` |
-  | `rentals.xyzsports.co.uk`       | `10.10.10.55` |
+| Domain Name                     | IP Address    |
+| ------------------------------- | ------------- |
+| `pet-rescue.org`                | `10.10.10.50` |
+| `www.pet-rescue.org`            | `10.10.10.50` |
+| `adoption.pet-rescue.org`       | `10.10.10.51` |
+| `creativedesigns.net`           | `10.10.10.52` |
+| `www.creativedesigns.net`       | `10.10.10.52` |
+| `catalogue.creativedesigns.net` | `10.10.10.53` |
+| `xyzsports.co.uk`               | `10.10.10.54` |
+| `www.xyzsports.co.uk`           | `10.10.10.54` |
+| `equipment.xyzsports.co.uk`     | `10.10.10.55` |
+| `purchase.xyzsports.co.uk`      | `10.10.10.55` |
+| `rentals.xyzsports.co.uk`       | `10.10.10.55` |
 
 11. On the (Microsoft Windows Server) Guest OS, bind the following additional IP
     addresses and subnet masks to the node's network adapter
 
-    | No. | IP Address    | Subnet Mask     |
-    | --- | ------------- | --------------- |
-    | #2  | `10.10.10.50` | `255.255.255.0` |
-    | #3  | `10.10.10.51` | `255.255.255.0` |
-    | #4  | `10.10.10.52` | `255.255.255.0` |
-    | #5  | `10.10.10.53` | `255.255.255.0` |
-    | #6  | `10.10.10.54` | `255.255.255.0` |
-    | #7  | `10.10.10.55` | `255.255.255.0` |
+| No. | IP Address    | Subnet Mask     |
+| --- | ------------- | --------------- |
+| #2  | `10.10.10.50` | `255.255.255.0` |
+| #3  | `10.10.10.51` | `255.255.255.0` |
+| #4  | `10.10.10.52` | `255.255.255.0` |
+| #5  | `10.10.10.53` | `255.255.255.0` |
+| #6  | `10.10.10.54` | `255.255.255.0` |
+| #7  | `10.10.10.55` | `255.255.255.0` |
 
 12. On the (Microsoft Windows) Guest OS, verify all (7) IP addresses bound the
     (Microsoft Windows Server) Guest OS are responsive
@@ -179,14 +179,16 @@
 18. On the (Microsoft Windows Server) Guest OS, make a copy of the
     (`C:\Data\index.html`) document into each of the following folders
 
-- `C:\Data\pet-rescue.org\www`
-- `C:\Data\pet-rescue.org\adoption`
-- `C:\Data\creativedesigns.net\www`
-- `C:\Data\creativedesigns.net\catalogue`
-- `C:\Data\xyzsports.co.uk\www`
-- `C:\Data\xyzsports.co.uk\equipment`
-- `C:\Data\xyzsports.co.uk\purchase`
-- `C:\Data\xyzsports.co.uk\rentals`
+```console
+C:\Data\pet-rescue.org\www
+C:\Data\pet-rescue.org\adoption
+C:\Data\creativedesigns.net\www
+C:\Data\creativedesigns.net\catalogue
+C:\Data\xyzsports.co.uk\www
+C:\Data\xyzsports.co.uk\equipment
+C:\Data\xyzsports.co.uk\purchase
+C:\Data\xyzsports.co.uk\rentals
+```
 
 19. On the (Microsoft Windows Server) Guest OS, modify each of the copied
     (`index.html`) documents, such that they show something unique when rendered
