--- a/pages/8/1.md
+++ b/pages/8/1.md
@@ -68,7 +68,7 @@
 - Every node (container), and item, below this level, is a part of, and managed
   by, this database engine instance
 
-![](../../res/8/1.img-1.webp)
+![](../../images/8/1.img-1.webp)
 
 2. Below the "Databases" node, lie the hosted databases for this database engine
    instance
@@ -77,7 +77,7 @@
   databases (Orders, Human Resources, Shipping Information)
 - In a new installation, only the system databases will initially be present
 
-![](../../res/8/1.img-2.webp)
+![](../../images/8/1.img-2.webp)
 
 3. Below the (Logins) node, lie the Login Objects for the database engine
    instance
@@ -88,13 +88,13 @@
   the information (including the user databases) which are managed by the
   database engine
 
-![](../../res/8/1.img-3.webp)
+![](../../images/8/1.img-3.webp)
 
 4. Below each database, there are Tables
 
 - Tables contain the data business' rely on daily
 
-![](../../res/8/1.img-4.webp)
+![](../../images/8/1.img-4.webp)
 
 5. Tables are custom designed to hold the underlying data
 
@@ -104,7 +104,7 @@
 - Data types also determine how much space is consumed to store each piece of
   data on the hard disk (storage device)
 
-![](../../res/8/1.img-5.webp)
+![](../../images/8/1.img-5.webp)
 
 6. Data is then entered into each table where it is stored
 
@@ -113,7 +113,7 @@
   (5) columns of data
 - Existing data is modified at a column level
 
-![](../../res/8/1.img-6.webp)
+![](../../images/8/1.img-6.webp)
 
 7. Users are authorized to access data by way of their Database User object
 
@@ -123,4 +123,4 @@
   each database's user object to determine if the user can view, create, modify,
   and remove rows of table data
 
-![](../../res/8/1.img-7.webp)
+![](../../images/8/1.img-7.webp)
