--- a/pages/8/2.md
+++ b/pages/8/2.md
@@ -26,27 +26,24 @@
 - The Guest OS should be capable of resolving both the "server" and the "client"
   nodes in your network environment using hostname values
 
-![](../../res/8/2.img-1.webp)
+![](../../images/8/2.img-1.webp)
 
 2. You should have (2) similar entries in the local resolution file on the
    Microsoft Windows Server Guest OS
 
 - Use your personal 9-digit number in place of the sample ones in this image
 
-```
+```console
 # Copyright (c) 1993-2009 Microsoft Corp.
 # This is a sample HOSTS file used by Microsoft TCP/IP for Windows.
-#
+
 # This file contains the mappings of IP addresses to host names
-- Each
-# entry should be kept on an individual line
-- The IP address should
-# be placed in the first column followed by the corresponding host name.
-# The IP address and the host name should be separated by at least one
-# space.
+# Each entry should be kept on an individual line
+# The IP address should be placed in the first column followed by the corresponding host name.
+# The IP address and the host name should be separated by at least one space.
 # Additionally, comments (such as these) may be inserted on individual
 # lines or following the machine name denoted by a '#' symbol.
-#
+
 # For example:
 #
 #   102.54.94.97    rhino.acme.com          # source server
@@ -71,16 +68,16 @@
 3. Using File Explorer, double-click on the optical drive which has the
    Microsoft SQL Server 2017 DVD ISO image "inserted" into it
 
-![](../../res/8/2.img-3.webp)
+![](../../images/8/2.img-3.webp)
 
 4. Click on the "Installation" category
 
-![](../../res/8/2.img-4.webp)
+![](../../images/8/2.img-4.webp)
 
 5. Click on the hyperlink to perform a new installation of the MSSQL software
    product
 
-![](../../res/8/2.img-5.webp)
+![](../../images/8/2.img-5.webp)
 
 6. Select the edition of the product you wish to install
 
@@ -88,11 +85,11 @@
 - The "Enterprise" edition is used in production environments
 - The "Developer" edition is be used for testing and development purposes
 
-![](../../res/8/2.img-6.webp)
+![](../../images/8/2.img-6.webp)
 
 7. Accept the license agreement
 
-![](../../res/8/2.img-7.webp)
+![](../../images/8/2.img-7.webp)
 
 8. This is not an error message
 
@@ -101,7 +98,7 @@
 - Not all nodes have to be connected to the Internet, nor should they be (for
   security reasons)
 
-![](../../res/8/2.img-8.webp)
+![](../../images/8/2.img-8.webp)
 
 9. For your database environment, you need only to install the "Database Engine"
    component
@@ -110,13 +107,13 @@
   applications (including web applications) to connect to the MSSQL database
   engine
 
-![](../../res/8/2.img-9.webp)
+![](../../images/8/2.img-9.webp)
 
 10. Here is the trickiest part of the installation, and where the installation
     can go terribly wrong, so pay close attention before clicking on the "Next"
     button
 
-![](../../res/8/2.img-10.webp)
+![](../../images/8/2.img-10.webp)
 
 11. For almost all installations of the MSSQL database engine, a "named
     instance" is used
@@ -133,7 +130,7 @@
 - Note that the "Instance ID" value is still set to the older "default instance"
   value (MSSQLSERVER)
 
-![](../../res/8/2.img-11.webp)
+![](../../images/8/2.img-11.webp)
 
 12. You must explicitly click in the "Instance ID" value's field, in order for
     the value to be updated to the "named instance" value you typed above it
@@ -141,7 +138,7 @@
 - Forgetting to do this, will result in an undesirable configuration
 - Once the (2) values match, click on the "Next" button to continue
 
-![](../../res/8/2.img-12.webp)
+![](../../images/8/2.img-12.webp)
 
 13. Ensure both the database engine and the browser are configured to start
     automatically each time the node is booted/re-booted, so users can connect
@@ -151,7 +148,7 @@
   MSSQL database engine
 - Next, click on the "Collation" tab
 
-![](../../res/8/2.img-13.webp)
+![](../../images/8/2.img-13.webp)
 
 ## Collation Settings
 
@@ -174,7 +171,7 @@
 
 14. In most cases, the default collation settings will suffice
 
-![](../../res/8/2.img-14.webp)
+![](../../images/8/2.img-14.webp)
 
 ## MSSQL Authentication
 
@@ -223,21 +220,23 @@
 - Add the currently signed-on SAM database (administrator) user account as an
   MSSQL database engine administrator
 
-![](../../res/8/2.img-15.webp)
+![](../../images/8/2.img-15.webp)
 
 16. A summary screen identifying the configuration settings you have chosen for
     the installation of the MSSQL software product
 
-![](../../res/8/2.img-16.webp)
+![](../../images/8/2.img-16.webp)
 
-17. Let the installation process complete ![](../../res/8/2.img-17.webp)
+17. Let the installation process complete
+
+![](../../images/8/2.img-17.webp)
 
 18. Ensure all of the components where installed successfully
 
 - Issues must be resolved first before you will be able to reliably use the
   database environment
 
-![](../../res/8/2.img-18.webp)
+![](../../images/8/2.img-18.webp)
 
 ## Completing the MSSQL Installation
 
@@ -255,7 +254,7 @@
 19. Here, all of the MSSQL related services, which are configured for an
     "automatic" startup state, have all started successfully
 
-![](../../res/8/2.img-19.webp)
+![](../../images/8/2.img-19.webp)
 
 ## MSSQL Specific Network Settings
 
@@ -292,7 +291,7 @@
 
 20. Locate and launch the "SQL Server 2017 Configuration Manager"
 
-![](../../res/8/2.img-20.webp)
+![](../../images/8/2.img-20.webp)
 
 21. Begin by enabling the (64 bit) version of the "server" (database engine) IP
     protocol settings
@@ -300,15 +299,15 @@
 - This change will allow remote nodes on the network to connect to the MSSQL
   database engine
 
-![](../../res/8/2.img-21.webp)
+![](../../images/8/2.img-21.webp)
 
 22. Acknowledge the 'service requires a restart' message
 
-![](../../res/8/2.img-22.webp)
+![](../../images/8/2.img-22.webp)
 
 23. Modify the properties of the IP protocol for the MSSQL installation
 
-![](../../res/8/2.img-23.webp)
+![](../../images/8/2.img-23.webp)
 
 24. This server node has multiple IP interfaces associated with it
 
@@ -318,7 +317,7 @@
 - No changes are required on this tab
 - Click on the "IP Addresses" tab
 
-![](../../res/8/2.img-24.webp)
+![](../../images/8/2.img-24.webp)
 
 25. By default, the MSSQL server will use "dynamic" port numbers for inbound
     connections from clients and applications
@@ -327,13 +326,13 @@
 - Configure the MSSQL server to respond to an explicit port number (1433) only
 - This is the reserved port number for an MSSQL server
 
-![](../../res/8/2.img-25.webp)
+![](../../images/8/2.img-25.webp)
 
 26. Apply the changes
 
 - Acknowledge the 'service requires a restart' message
 
-![](../../res/8/2.img-26.webp)
+![](../../images/8/2.img-26.webp)
 
 27. Locate the (64 bit) version of the "client" IP protocol settings
 
@@ -343,7 +342,7 @@
   ("servers") in the network environment to communicate with, plus, the (IP)
   protocol is already enabled
 
-![](../../res/8/2.img-27.webp)
+![](../../images/8/2.img-27.webp)
 
 28. Locate the MSSQL database engine service
 
@@ -351,7 +350,7 @@
 - From the shortcut menu, select the option to "Stop" the database engine
   service currently running on this node
 
-![](../../res/8/2.img-28.webp)
+![](../../images/8/2.img-28.webp)
 
 29. From a stopped state, select the option to "Start" the MSSQL database engine
     service
@@ -359,12 +358,12 @@
 - Once started, changes to the MSSQL specific network settings will become
   effective
 
-![](../../res/8/2.img-29.webp)
+![](../../images/8/2.img-29.webp)
 
 30. Here, the MSSQL database engine is back in a running state, and is now
     capable of accepting inbound connections from remote nodes on the network
 
-![](../../res/8/2.img-30.webp)
+![](../../images/8/2.img-30.webp)
 
 ## Installing the Native MSSQL Native User Interfaces
 
@@ -406,18 +405,20 @@
 - Double-click on it to begin the installation of the MSSQL native GUI user
   interface
 
-![](../../res/8/2.img-31.webp)
+![](../../images/8/2.img-31.webp)
 
 32. Click on the "Install" button, and let the software product install
 
-![](../../res/8/2.img-32.webp)
+![](../../images/8/2.img-32.webp)
 
-33. Let the installation complete ![](../../res/8/2.img-33.webp)
+33. Let the installation complete
+
+![](../../images/8/2.img-33.webp)
 
 34. Once the installation has successfully completed, click on the "Restart"
     button
 
-![](../../res/8/2.img-34.webp)
+![](../../images/8/2.img-34.webp)
 
 ## Updating the MSSQL Native CLI User Interface (sqlcmd)
 
@@ -435,25 +436,25 @@
 - Double-click on it to begin the installation of the MSSQL native CLI user
   interface
 
-![](../../res/8/2.img-36.webp)
+![](../../images/8/2.img-36.webp)
 
 37. Click on the "Next" button
 
-![](../../res/8/2.img-37.webp)
+![](../../images/8/2.img-37.webp)
 
 38. Accept the license agreement
 
-![](../../res/8/2.img-38.webp)
+![](../../images/8/2.img-38.webp)
 
 39. Click on the "Install" button to begin the software product installation
     process
 
-![](../../res/8/2.img-39.webp)
+![](../../images/8/2.img-39.webp)
 
 40. Once the installation has successfully completed, click on the "Finish"
     button
 
-![](../../res/8/2.img-40.webp)
+![](../../images/8/2.img-40.webp)
 
 41. There are (2) versions of the (sqlcmd) CLI utility now installed on this
     node
@@ -466,21 +467,21 @@
 
 42. Launch the Control Panel "system" applet
 
-![](../../res/8/2.img-42.webp)
+![](../../images/8/2.img-42.webp)
 
 43. From the Control Panel "system" applet, click on the "Advanced system
     settings" link
 
-![](../../res/8/2.img-43.webp)
+![](../../images/8/2.img-43.webp)
 
 44. Click on the "Environment variables..." button
 
-![](../../res/8/2.img-44.webp)
+![](../../images/8/2.img-44.webp)
 
 45. Select the existing (Path) system environment variable, then click on the
     "Edit..." button
 
-![](../../res/8/2.img-45.webp)
+![](../../images/8/2.img-45.webp)
 
 46. (A) Is the location of the newer version of the (sqlcmd) CLI utility
 
@@ -489,16 +490,16 @@
   list of file system locations for the (Path) system environment variable
 - Use the "Move up..." button to relocate folder location (A) before (B)
 
-![](../../res/8/2.img-46.webp)
+![](../../images/8/2.img-46.webp)
 
 47. Once the order has been adjusted, click on the "Ok" button to save the
     change
 
-![](../../res/8/2.img-47.webp)
+![](../../images/8/2.img-47.webp)
 
 48. Click on the remaining "Ok" buttons, to complete the setting change
 
-![](../../res/8/2.img-48.webp)
+![](../../images/8/2.img-48.webp)
 
 49. Re-launch a Windows PowerShell session, and check the version of the
     (sqlcmd) CLI utility
@@ -511,7 +512,7 @@
 50. Locate and launch the Microsoft SQL Server Management Studio (SSMS)
     application
 
-![](../../res/8/2.img-50.webp)
+![](../../images/8/2.img-50.webp)
 
 51. In order to connect to the MSSQL database engine, you must first
     authenticate
@@ -522,7 +523,7 @@
 - Note the format of the MSSQL database engine name (nodename\instancename)
 - Do not authenticate yet
 
-![](../../res/8/2.img-51.webp)
+![](../../images/8/2.img-51.webp)
 
 52. Using SQL Server Authentication, the security credentials (username +
     password) must be entered
@@ -534,7 +535,7 @@
   (Adm1np&ss)
 - Do not authenticate yet
 
-![](../../res/8/2.img-52.webp)
+![](../../images/8/2.img-52.webp)
 
 53. Now, authenticate to the MSSQL database engine, using the local SAM database
     (administrator) user account
@@ -542,14 +543,14 @@
 - This will give you full privileges within the MSSQL database engine
   environment
 
-![](../../res/8/2.img-53.webp)
+![](../../images/8/2.img-53.webp)
 
 54. Graphically, here is the root of your MSSQL database engine
 
 - Note the name of the MSSQL database engine instance is present, along with
   ‘who' you are currently connected as
 
-![](../../res/8/2.img-54.webp)
+![](../../images/8/2.img-54.webp)
 
 ## Customizing the (SSMS) User Interface
 
@@ -557,16 +558,16 @@
 
 - Add the "Object Explorer Details" pane to the interface
 
-![](../../res/8/2.img-55.webp)
+![](../../images/8/2.img-55.webp)
 
 56. Next, add the "Properties Window" pane to the interface
 
-![](../../res/8/2.img-56.webp)
+![](../../images/8/2.img-56.webp)
 
 57. These are the (3) panes for the (SSMS) interface most users will require
     when working with a MSSQL environment
 
-![](../../res/8/2.img-57.webp)
+![](../../images/8/2.img-57.webp)
 
 ## Default Databases
 
@@ -578,7 +579,7 @@
 - User databases are required to store personal data (for you) or business data
   (for a company)
 
-![](../../res/8/2.img-58.webp)
+![](../../images/8/2.img-58.webp)
 
 ## Graceful Disconnection
 
@@ -588,31 +589,33 @@
 
 - The MSSQL database engine will then close your connection properly
 
-![](../../res/8/2.img-59.webp)
+![](../../images/8/2.img-59.webp)
 
 60. To connect to the same (or a different) MSSQL database engine, click on the
-    "Connect" button ![](../../res/8/2.img-60.webp)
+    "Connect" button
+
+![](../../images/8/2.img-60.webp)
 
 61. Select that you wish to connect to a database engine
-    ![](../../res/8/2.img-61.webp)
+    ![](../../images/8/2.img-61.webp)
 
 62. ...and authenticate
 
-![](../../res/8/2.img-62.webp)
+![](../../images/8/2.img-62.webp)
 
 ## Connecting using the (sqlcmd) User Interface
 
 63. A connection to the database engine instance using Windows Authentication,
     using the (sqlcmd) CLI utility
 
-```
+```console
 PS C:\Users\Administrator> sqlcmd -S w000123456a\dbe000123456a -E
 ```
 
 64. A connection to the database engine instance using internal SQL
     Authentication, using the (sqlcmd) CLI utility
 
-```
+```console
 PS C:\Users\Administrator> sqlcmd -S w000123456a\dbe000123456a -U sa
 Password:
 ```
