--- a/pages/1/6.md
+++ b/pages/1/6.md
@@ -14,14 +14,14 @@
 1. Click on the "New" button to begin the creation of a new virtual machine
    configuration profile
 
-![](../../res/1/6.img-1.webp)
+![](../../images/1/6.img-1.webp)
 
 2. Assign a meaningful name for the new virtual machine configuration profile
 
 - Identify the correct type, version and build (or as close as possible) for the
   Guest OS (operating system) being installed
 
-![](../../res/1/6.img-2.webp)
+![](../../images/1/6.img-2.webp)
 
 3. Assign an appropriate amount of the Host OS' physical memory for the Guest OS
    to use
@@ -33,7 +33,7 @@
 - Assigning more memory to the Guest OS is better, but be careful not to leave
   the Host OS with too little or it will perform poorly
 
-![](../../res/1/6.img-3.webp)
+![](../../images/1/6.img-3.webp)
 
 4. A new virtual disk image (`*.vdi`) file will need to be created
 
@@ -42,14 +42,14 @@
 - Think of a (`*.vdi`) file as a separate hard disk, which is attached to a
   virtual machine (instead of a physical computer)
 
-![](../../res/1/6.img-4.webp)
+![](../../images/1/6.img-4.webp)
 
 5. Use the native virtual disk format for the Oracle VM VirtualBox platform
 
 - The remaining formats listed are for other virtualization platform products
   (e.g. VMware ESXi, Microsoft Hyper-V, etc)
 
-![](../../res/1/6.img-5.webp)
+![](../../images/1/6.img-5.webp)
 
 6. Allow the virtual disk image to start off small in size, and grow as needed
 
@@ -57,7 +57,7 @@
   is typically suggested, so you don't accidentally consume all of the available
   space on your portable USB-powered storage device
 
-![](../../res/1/6.img-6.webp)
+![](../../images/1/6.img-6.webp)
 
 7. Allow the virtual disk image file to grow to a maximum of (300 GB)
 
@@ -66,7 +66,7 @@
 - Click on the folder icon, and identify a folder on your portable USB-powered
   storage device where you want this new (`*.vdi`) file to be created
 
-![](../../res/1/6.img-7.webp)
+![](../../images/1/6.img-7.webp)
 
 8. The wizard does a good job of creating the virtual machine configuration
    profile, but there are additional settings which need to be made
@@ -74,14 +74,14 @@
 - With the new virtual machine configuration profile selected (highlighted by
   the colour blue), click on the "Settings" button
 
-![](../../res/1/6.img-8.webp)
+![](../../images/1/6.img-8.webp)
 
 9. Configure the virtual machine for bidirectional clipboard capability
 
 - Once the Guest Additions are installed onto the Guest OS, you will be able to
   (cut+copy+paste) data between the Host OS and the Guest OS
 
-![](../../res/1/6.img-9.webp)
+![](../../images/1/6.img-9.webp)
 
 10. The days of floppy disks are long gone
 
@@ -89,7 +89,7 @@
   hardware, so deselect it
 - Also, change the boot order for a typical configuration
 
-![](../../res/1/6.img-10.webp)
+![](../../images/1/6.img-10.webp)
 
 11. Aside from memory, one of the best settings to increase is the amount of
     virtual CPUs associated with the virtual machine
@@ -99,7 +99,7 @@
 - The maximum number of (8 CPUs) above, is the sum of all CPU cores and
   hyper-threading features of the CPUs on this physical host computer system
 
-![](../../res/1/6.img-11.webp)
+![](../../images/1/6.img-11.webp)
 
 12. Many of the Guest OSes you create or use throughout your program will make
     use of a graphical desktop
@@ -108,42 +108,42 @@
   you assign the maximum amount of video memory for each virtual machine
   configuration profile you create
 
-![](../../res/1/6.img-12.webp)
+![](../../images/1/6.img-12.webp)
 
 13. The (IDE) storage controller is old, outdated, and slow, when compared to
     the newer (SATA) storage controller, so get rid of it
 
 - The steps to do so are documented over the next few slides
 
-![](../../res/1/6.img-13.webp)
+![](../../images/1/6.img-13.webp)
 
 14. Select the existing virtual optical CD/DVD-ROM storage device connected to
     the IDE storage controller
 
 - Click on the remove device icon
 
-![](../../res/1/6.img-14.webp)
+![](../../images/1/6.img-14.webp)
 
 15. Confirm that you wish to remove the storage device
 
-![](../../res/1/6.img-15.webp)
+![](../../images/1/6.img-15.webp)
 
 16. Select the existing IDE storage controller
 
 - Click on the remove storage adapter icon
 
-![](../../res/1/6.img-16.webp)
+![](../../images/1/6.img-16.webp)
 
 17. Add a virtual optical CD/DVD-ROM storage device to the SATA storage
     controller
 
 - Select the SATA controller, and click on the add optical device icon
 
-![](../../res/1/6.img-17.webp)
+![](../../images/1/6.img-17.webp)
 
 18. Leave the virtual CD/DVD-ROM storage device empty for now
 
-![](../../res/1/6.img-18.webp)
+![](../../images/1/6.img-18.webp)
 
 19. At a minimum, this is what you want all of your virtual machine
     configuration profiles to look like, from a storage perspective
@@ -152,41 +152,41 @@
   CD/DVD-ROM storage device, connected to the newer and faster SATA storage
   controller
 
-![](../../res/1/6.img-19.webp)
+![](../../images/1/6.img-19.webp)
 
 20. Next, associate the operating system installation media with the virtual
     optical CD/DVD-ROM storage device
 
-- Click on the CD/DVD icon, and select the "Choose Virtual Optical Disk File, "
+- Click on the CD/DVD icon, and select the "Choose Virtual Optical Disk File"
   option
 
-![](../../res/1/6.img-20.webp)
+![](../../images/1/6.img-20.webp)
 
 21. Locate and click on the DVD ISO image file you downloaded earlier
 
 - This is what the virtual machine will initially boot from, in order to install
   the Guest OS' operating system into the virtual disk image (`*.vdi`) file
 
-![](../../res/1/6.img-21.webp)
+![](../../images/1/6.img-21.webp)
 
 22. Ensure the installation media is associated with the virtual optical
     CD/DVD-ROM storage device, or you won't be able to boot your virtual machine
     successfully
 
-![](../../res/1/6.img-22.webp)
+![](../../images/1/6.img-22.webp)
 
 23. The installation of the Guest OS will need Internet connectivity, and
     without having to use a dedicated IPv4 address
 
 - The NAT adapter will satisfy this requirement
 
-![](../../res/1/6.img-23.webp)
+![](../../images/1/6.img-23.webp)
 
 24. With the virtual machine configuration properly configured, click on the
     "Start" button to boot the virtual machine, and begin the operating system
     installation process
 
-![](../../res/1/6.img-24.webp)
+![](../../images/1/6.img-24.webp)
 
 ## Installing the Operating System
 
@@ -196,15 +196,15 @@
 - Using the arrow keys on your keyboard, select the option to "Install Oracle
   Linux 8.0.0"
 
-![](../../res/1/6.img-25.webp)
+![](../../images/1/6.img-25.webp)
 
 26. Let the operating system boot from the installation media
 
-![](../../res/1/6.img-26.webp)
+![](../../images/1/6.img-26.webp)
 
 27. Click on the "Continue" button
 
-![](../../res/1/6.img-27.webp)
+![](../../images/1/6.img-27.webp)
 
 28. Unlike with the Microsoft Windows and Microsoft Windows Server Guest OS
     installations, your mouse and keyboard will need to be explicitly "captured"
@@ -215,7 +215,7 @@
 - Once the Guest Additions are installed, this explicit capture/release process
   will no longer be required
 
-![](../../res/1/6.img-28.webp)
+![](../../images/1/6.img-28.webp)
 
 29. This is the main installation menu
 
@@ -223,7 +223,7 @@
 - Click on the "Software Selection" option to select which software components
   will be initially installed on this new Oracle Linux host
 
-![](../../res/1/6.img-29.webp)
+![](../../images/1/6.img-29.webp)
 
 30. Select the "Server with GUI" base environment option
 
@@ -233,7 +233,7 @@
   this screen
 - Click on the "Done" button when finished
 
-![](../../res/1/6.img-30.webp)
+![](../../images/1/6.img-30.webp)
 
 31. From the main installation menu, select the "KDUMP" option
 
@@ -241,7 +241,7 @@
   dumps, so disable this feature
 - Click on the "Done" button when finished
 
-![](../../res/1/6.img-31.webp)
+![](../../images/1/6.img-31.webp)
 
 32. From the main installation menu, select the "Network & Host Name" option
 
@@ -254,16 +254,16 @@
   - 9-digit personal number
   - the lower case letter "a"
 
-![](../../res/1/6.img-32.webp)
+![](../../images/1/6.img-32.webp)
 
 33. Configure the network adapter to be automatically enabled when the Guest OS
     boots, then, click on the "Save" button
 
-![](../../res/1/6.img-33.webp)
+![](../../images/1/6.img-33.webp)
 
 34. Return to the main installation menu by clicking on the "Done" button
 
-![](../../res/1/6.img-34.webp)
+![](../../images/1/6.img-34.webp)
 
 35. From the main installation menu, select the "Installation Destination"
     option
@@ -273,28 +273,28 @@
 - Leave the "Automatically Storage Configuration" option selected
 - Click on the "Done" button
 
-![](../../res/1/6.img-35.webp)
+![](../../images/1/6.img-35.webp)
 
 36. From the main installation menu, select the "Begin Installation" button
 
-![](../../res/1/6.img-36.webp)
+![](../../images/1/6.img-36.webp)
 
 37. From the installation progress screen, select the "Root Password" option, to
     configure the main administrative user account (root) with a password
 
-![](../../res/1/6.img-37.webp)
+![](../../images/1/6.img-37.webp)
 
 38. Enter a password for the (root) administrative user account
 
 - Type in (Adm1np&ss)
 - Click on the "Done" button to return to the previous screen
 
-![](../../res/1/6.img-38.webp)
+![](../../images/1/6.img-38.webp)
 
 39. From the installation progress screen, select the "User Creation" option, to
     create a new non-administrative user account
 
-![](../../res/1/6.img-39.webp)
+![](../../images/1/6.img-39.webp)
 
 40. Enter the details for a new non-administrative user account
 
@@ -302,20 +302,20 @@
 - Type in (P&ssw0rd) for the password fields
 - Click on the "Done" button twice to return to the previous screen
 
-![](../../res/1/6.img-40.webp)
+![](../../images/1/6.img-40.webp)
 
 41. Wait for the installation to complete
 
 - The installation progress will be updated periodically to inform you how far
   along the process is
 
-![](../../res/1/6.img-41.webp)
+![](../../images/1/6.img-41.webp)
 
 42. Installation is now complete
 
 - Click on the "Reboot" button
 
-![](../../res/1/6.img-42.webp)
+![](../../images/1/6.img-42.webp)
 
 ## First Boot
 
@@ -327,67 +327,67 @@
   during the startup process
 - It will automatically change over time as needed
 
-![](../../res/1/6.img-43.webp)
+![](../../images/1/6.img-43.webp)
 
 44. From the initial setup screen, click on the "License Information" option
 
-![](../../res/1/6.img-44.webp)
+![](../../images/1/6.img-44.webp)
 
 45. Accept the License Agreement, then return to the initial setup screen by
     clicking on the "Done" button
 
-![](../../res/1/6.img-45.webp)
+![](../../images/1/6.img-45.webp)
 
 46. Click on the "Finish Configuration" button to continue
 
-![](../../res/1/6.img-46.webp)
+![](../../images/1/6.img-46.webp)
 
 47. Sign in to the new Oracle Linux Guest OS as the (root) user
 
 - Click on the "Not Listed?" option
 
-![](../../res/1/6.img-47.webp)
+![](../../images/1/6.img-47.webp)
 
 48. Explicitly type in the (root) user name
 
 - Click on the "Next" button
 
-![](../../res/1/6.img-48.webp)
+![](../../images/1/6.img-48.webp)
 
 49. Type in the password for the (root) user
 
 - The password is (Adm1np&ss)
 - Click on the "Sign In" button
 
-![](../../res/1/6.img-49.webp)
+![](../../images/1/6.img-49.webp)
 
 50. Click on the "Next" button
 
-![](../../res/1/6.img-50.webp)
+![](../../images/1/6.img-50.webp)
 
 51. Click on the "Next" button
 
-![](../../res/1/6.img-51.webp)
+![](../../images/1/6.img-51.webp)
 
 52. Disable "Location Services", then click on the "Next" button
 
-![](../../res/1/6.img-52.webp)
+![](../../images/1/6.img-52.webp)
 
 53. Click on the "Skip" button
 
-![](../../res/1/6.img-53.webp)
+![](../../images/1/6.img-53.webp)
 
 54. Click on the "Start Using Oracle Linux Server" button
 
-![](../../res/1/6.img-54.webp)
+![](../../images/1/6.img-54.webp)
 
 55. Close the foreground application to reveal the desktop
 
-![](../../res/1/6.img-55.webp)
+![](../../images/1/6.img-55.webp)
 
 56. Your initial look at the Oracle Linux desktop environment
 
-![](../../res/1/6.img-56.webp)
+![](../../images/1/6.img-56.webp)
 
 ## Customizing the User Environment
 
@@ -395,20 +395,20 @@
 
 - This is similar to the Control Panel for Microsoft Windows
 
-![](../../res/1/6.img-57.webp)
+![](../../images/1/6.img-57.webp)
 
 58. Click on the "Power" settings category
 
-![](../../res/1/6.img-58.webp)
+![](../../images/1/6.img-58.webp)
 
 59. Adjust the power settings (for this user), such that the desktop screen
     never goes blank
 
-![](../../res/1/6.img-59.webp)
+![](../../images/1/6.img-59.webp)
 
 60. Close the settings panel when finished
 
-![](../../res/1/6.img-60.webp)
+![](../../images/1/6.img-60.webp)
 
 ## Updating the Operating System
 
@@ -417,41 +417,41 @@
 - This will ensure there are no processes running, which may interfere with the
   operating system updating steps documented over the next few slides
 
-![](../../res/1/6.img-61.webp)
+![](../../images/1/6.img-61.webp)
 
 62. Restart the Oracle Linux Guest OS
 
-![](../../res/1/6.img-62.webp)
+![](../../images/1/6.img-62.webp)
 
 63. Let the Oracle Linux Guest OS restart
 
 - Again, do not alter from the default Oracle Linux kernel at any point
 
-![](../../res/1/6.img-63.webp)
+![](../../images/1/6.img-63.webp)
 
 64. Sign in to the new Oracle Linux Guest OS as the (root) user
 
 - Click on the "Not Listed?" option
 
-![](../../res/1/6.img-64.webp)
+![](../../images/1/6.img-64.webp)
 
 65. Explicitly type in the (root) user name
 
 - Click on the "Next" button
 
-![](../../res/1/6.img-65.webp)
+![](../../images/1/6.img-65.webp)
 
 66. Type in the password for the (root) user
 
 - The password is (Adm1np&ss)
 - Click on the "Sign In" button
 
-![](../../res/1/6.img-66.webp)
+![](../../images/1/6.img-66.webp)
 
 67. Locate and click on the (Terminal) application in order to launch a (bash)
     shell from within the desktop environment
 
-![](../../res/1/6.img-67.webp)
+![](../../images/1/6.img-67.webp)
 
 68. This is the (bash) shell
 
@@ -459,7 +459,7 @@
   (powershell.exe) command-line interface environments for a Microsoft Windows
   host
 
-![](../../res/1/6.img-68.webp)
+![](../../images/1/6.img-68.webp)
 
 69. To update the Oracle Linux host, type in (yum update), followed by the
     (`<Enter>`) key
@@ -468,14 +468,14 @@
   will be updated from sources located on the Internet
 - This is similar to the update process for a Microsoft Windows host
 
-```
+```console
 [root@o1000123456a ~]# yum update
 ```
 
 70. Once a list of software (which needs to be updated), has been identified,
     type in (y), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Transaction Summary
@@ -489,7 +489,7 @@ Is this ok [y/N]: Y
 
 71. Some software packages are secured using a digital certificate
 
-```
+```console
 ...
 
 Total                         2.4 MB/S | 259 MB           01:48
@@ -505,7 +505,7 @@ Is this ok [y/N]: y
 72. As the software is downloaded and installed, you will be able to see the
     installation progress for each package
 
-```
+```console
 Key imported successfully
 Running transaction check
 Transaction check succeeded.
@@ -518,7 +518,7 @@ Running transaction
 73. After the software updates have been downloaded and installed, you will be
     returned to the shell prompt
 
-```
+```console
 ...
 
 Installed:
@@ -542,36 +542,36 @@ Complete!
 - It also lets you see if there are problems with the new software
 - Locate and click on the shut down options button
 
-![](../../res/1/6.img-74.webp)
+![](../../images/1/6.img-74.webp)
 
 75. Select the option to restart the host (Guest OS)
 
-![](../../res/1/6.img-75.webp)
+![](../../images/1/6.img-75.webp)
 
 76. Let the Oracle Linux Guest OS restart
 
 - Again, do not alter from the default Oracle Linux kernel at any point
 
-![](../../res/1/6.img-76.webp)
+![](../../images/1/6.img-76.webp)
 
 77. Sign in to the new Oracle Linux Guest OS as the (root) user
 
 - Click on the "Not Listed?" option
 
-![](../../res/1/6.img-77.webp)
+![](../../images/1/6.img-77.webp)
 
 78. Explicitly type in the (root) user name
 
 - Click on the "Next" button
 
-![](../../res/1/6.img-78.webp)
+![](../../images/1/6.img-78.webp)
 
 79. Type in the password for the (root) user
 
 - The password is (Adm1np&ss)
 - Click on the "Sign In" button
 
-![](../../res/1/6.img-79.webp)
+![](../../images/1/6.img-79.webp)
 
 ## Installing the Guest Additions
 
@@ -632,13 +632,13 @@ Complete!
 80. Locate and click on the (Terminal) application in order to launch a (bash)
     shell from within the desktop environment
 
-![](../../res/1/6.img-80.webp)
+![](../../images/1/6.img-80.webp)
 
 81. Download and install the source code compiler
 
 - Type in the following command EXACTLY, followed by the (`<Enter>`) key:
 
-```
+```console
 [root@ol000123456a ~]# yum  install  gcc
 ```
 
@@ -647,7 +647,7 @@ Complete!
 
 - Type in (y), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Transaction Summary
@@ -664,7 +664,7 @@ Is this ok [y/N]: Y
 
 - Type in (clear), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Installed:
@@ -681,7 +681,7 @@ Complete!
 
 - Type in the following command EXACTLY, followed by the (`<Enter>`) key:
 
-```
+```console
 [root@ol000123456a ~1# yum install make
 ```
 
@@ -690,7 +690,7 @@ Complete!
 
 - Type in (y), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Transaction Summary
@@ -707,7 +707,7 @@ Is this ok [y/N]: y
 
 - Type in (clear), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Running transaction check
@@ -727,7 +727,7 @@ Complete!
 
 - Type in the following command EXACTLY, followed by the (`<Enter>`) key:
 
-```
+```console
 [root@ol000123456a ~]# yum install kernel-devel-$(uname -r)
 ```
 
@@ -736,7 +736,7 @@ Complete!
 
 - Type in (y), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Transaction Summary
@@ -753,7 +753,7 @@ Is this ok [y/N]: y
 
 - Type in (clear), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Running transaction check
@@ -772,7 +772,7 @@ Complete!
 
 - Type in the following command EXACTLY, followed by the (`<Enter>`) key:
 
-```
+```console
 [root@ol000123456a ~]# yum install elfutils-libelf-devel
 ```
 
@@ -781,7 +781,7 @@ Complete!
 
 - Type in (y), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Transaction Summary
@@ -798,7 +798,7 @@ Is this ok [y/N]: y
 
 - Type in (clear), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Running transaction check
@@ -817,7 +817,7 @@ Complete!
 
 - Type in the following command EXACTLY, followed by the (`<Enter>`) key:
 
-```
+```console
 [root@ol000123456a ~¡# yum  install  annobin
 ```
 
@@ -826,7 +826,7 @@ Complete!
 
 - Type in (y), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Transaction Summary
@@ -843,7 +843,7 @@ Is this ok [y/N]: Y
 
 - Type in (exit), followed by the (`<Enter>`) key
 
-```
+```console
 ...
 
 Running transaction check
@@ -860,36 +860,36 @@ Complete!
 
 96. Restart the Guest OS
 
-![](../../res/1/6.img-96.webp)
+![](../../images/1/6.img-96.webp)
 
 97. Click "Restart"
 
-![](../../res/1/6.img-97.webp)
+![](../../images/1/6.img-97.webp)
 
 98. Let the Oracle Linux Guest OS restart
 
 - Again, do not alter from the default Oracle Linux kernel at any point
 
-![](../../res/1/6.img-98.webp)
+![](../../images/1/6.img-98.webp)
 
 99. Sign in to the new Oracle Linux Guest OS as the (root) user
 
 - Click on the "Not Listed?" option
 
-![](../../res/1/6.img-99.webp)
+![](../../images/1/6.img-99.webp)
 
 100. Explicitly type in the (root) user name
 
 - Click on the "Next" button
 
-![](../../res/1/6.img-100.webp)
+![](../../images/1/6.img-100.webp)
 
 101. Type in the password for the (root) user
 
 - The password is (Adm1np&ss)
 - Click on the "Sign In" button
 
-![](../../res/1/6.img-101.webp)
+![](../../images/1/6.img-101.webp)
 
 102. Now that the prerequisites for the Guest Additions have been installed, the
      final step is to install the Guest Additions itself
@@ -898,47 +898,47 @@ Complete!
   insert the Guest Additions CD ISO image in it
 - Open the file management interface for the Oracle Linux operating system
 
-![](../../res/1/6.img-102.webp)
+![](../../images/1/6.img-102.webp)
 
 103. If you see that the Oracle Linux installation media is still inserted into
      the virtualized CD/DVD-ROM drive, click on the button to eject (unmount) it
 
-![](../../res/1/6.img-103.webp)
+![](../../images/1/6.img-103.webp)
 
 104. Here, there is no media associated with the CD/DVD-ROM drive, as it should
      be at this point
 
 - Close the file management interface
 
-![](../../res/1/6.img-104.webp)
+![](../../images/1/6.img-104.webp)
 
 105. From the (Devices) menu on the Oracle Linux Guest OS, choose which ISO
      image file you want to be associated with the virtualized CD/DVD-ROM
      optical drive for the virtual machine
 
-![](../../res/1/6.img-105.webp)
+![](../../images/1/6.img-105.webp)
 
 106. Select the recently downloaded version (6.0.14) version of the Oracle VM
      VirtualBox Guest Additions ISO image file
 
-![](../../res/1/6.img-106.webp)
+![](../../images/1/6.img-106.webp)
 
 107. Select "Cancel" for the option to run
 
 - You really should run the installer from a command-line environment, or else
   you will never see what (if any) error messages appear
 
-![](../../res/1/6.img-107.webp)
+![](../../images/1/6.img-107.webp)
 
 108. Locate and click on the (Terminal) application in order to launch a (bash)
      shell from within the desktop environment
 
-![](../../res/1/6.img-108.webp)
+![](../../images/1/6.img-108.webp)
 
 109. If you are using Oracle VM VirtualBox (6.0.14), then the (cd) command below
      will be:
 
-```
+```console
 [root@ol000123456a ~]# cd /run/media/root/VBox_GAs_6.0.14
 ```
 
@@ -946,7 +946,7 @@ Complete!
 - An Oracle Linux operating system is case sensitive, so make sure you type
   upper and lower case characters EXACTLY as indicated above
 
-```
+```console
 [root@ol000123456a VBoX GAs 6.0.14]# clear
 ```
 
@@ -955,7 +955,7 @@ Complete!
 - This will begin the installation process for the Oracle VM VirtualBox Guest
   Additions
 
-```
+```console
 [root@ol000123456a BoX GAs 6.0.14]# ./VBoxLinuxAdditions.run
 ```
 
@@ -964,49 +964,49 @@ Complete!
 - Once the Oracle VM VirtualBox Guest Additions have been installed
   successfully, gracefully exit the (Terminal) application
 
-```
+```console
 [root@ol000123456a Box GAs 6.0.14]# exit
 ```
 
 112. Restart the Guest OS
 
-![](../../res/1/6.img-112.webp)
+![](../../images/1/6.img-112.webp)
 
 113. Click the "Restart" button
 
-![](../../res/1/6.img-113.webp)
+![](../../images/1/6.img-113.webp)
 
 114. Let the Oracle Linux Guest OS restart
 
 - Again, do not alter from the default Oracle Linux kernel at any point
 
-![](../../res/1/6.img-114.webp)
+![](../../images/1/6.img-114.webp)
 
 115. Sign in to the new Oracle Linux Guest OS as the (root) user
 
 - Click on the "Not Listed?" option
 
-![](../../res/1/6.img-115.webp)
+![](../../images/1/6.img-115.webp)
 
 116. Explicitly type in the (root) user name
 
 - Click on the "Next" button
 
-![](../../res/1/6.img-116.webp)
+![](../../images/1/6.img-116.webp)
 
 117. Type in the password for the (root) user
 
 - The password is (Adm1np&ss)
 - Click on the "Sign In" button
 
-![](../../res/1/6.img-117.webp)
+![](../../images/1/6.img-117.webp)
 
 118. Resize the Guest OS console window
 
 - The Guest OS' desktop will resize accordingly, if the Guest Additions were
   installed successfully
 
-![](../../res/1/6.img-118.webp)
+![](../../images/1/6.img-118.webp)
 
 119. Here is an example of a properly installed and working Guest Additions
      installation, as the desktop resized successfully
@@ -1015,17 +1015,17 @@ Complete!
   capture/release the mouse with the virtual machine
 - This is called seamless mouse integration
 
-![](../../res/1/6.img-119.webp)
+![](../../images/1/6.img-119.webp)
 
 120. Using the file management interface, eject (unmount) the Guest Additions CD
      ISO image file from the CD/DVD-ROM drive
 
-![](../../res/1/6.img-120.webp)
+![](../../images/1/6.img-120.webp)
 
 121. Locate the Guest Additions CD ISO image file, then click on the associated
      icon to eject (unmount) it from your Oracle Linux Guest OS
 
-![](../../res/1/6.img-121.webp)
+![](../../images/1/6.img-121.webp)
 
 ## Disabling the Firewall Service
 
@@ -1044,18 +1044,18 @@ Complete!
 122. Locate and click on the (Terminal) application in order to launch a (bash)
      shell from within the desktop environment
 
-![](../../res/1/6.img-122.webp)
+![](../../images/1/6.img-122.webp)
 
 123. The firewall is now in both a stopped and disabled state
 
-```
+```console
 [root@ol000123456a ~]# systemctl stop firewalld
 [root@ol000123456a ~]# systemctl disable firewalld
 ```
 
 - Once completed, gracefully exit the (Terminal) application
 
-```
+```console
 [root@ol000123456a ~]# exit
 ```
 
@@ -1069,14 +1069,14 @@ Complete!
 124. Locate and click on the (Terminal) application in order to launch a (bash)
      shell from within the desktop environment
 
-![](../../res/1/6.img-124.webp)
+![](../../images/1/6.img-124.webp)
 
 125. Run the (yum update) command
 
 - If any new updates are available, install them
 - Once completed, close the (Terminal) application gracefully
 
-```
+```console
 [root@ol000123456a ~]# yum update
 
 ...
@@ -1100,15 +1100,15 @@ Complete!
 
 126. Shutdown the Guest OS
 
-![](../../res/1/6.img-126.webp)
+![](../../images/1/6.img-126.webp)
 
 127. Click the "Restart" button
 
-![](../../res/1/6.img-127.webp)
+![](../../images/1/6.img-127.webp)
 
 128. Verify the Guest OS has been shutdown
 
-![](../../res/1/6.img-128.webp)
+![](../../images/1/6.img-128.webp)
 
 ## The Virtual Media Manager Repository
 
@@ -1135,44 +1135,44 @@ Complete!
 - It must first be released from the associated virtual machine configuration
   profile
 
-![](../../res/1/6.img-129.webp)
+![](../../images/1/6.img-129.webp)
 
 130. Also make note of the location of the (`*.vdi`) file (it should be located
      on your portable USB-powered storage device)
 
-![](../../res/1/6.img-130.webp)
+![](../../images/1/6.img-130.webp)
 
 131. Click on the (Release) icon, and release the virtual disk image (`*.vdi`)
      file from the (Oracle Linux) virtual machine configuration profile
 
-![](../../res/1/6.img-131.webp)
+![](../../images/1/6.img-131.webp)
 
 132. Once the image file has been released from a virtual machine configuration
      profile, you are then able to remove it from the Virtual Media Manager
      repository
 
-![](../../res/1/6.img-132.webp)
+![](../../images/1/6.img-132.webp)
 
 133. Click on the (Remove) icon, and remove the virtual disk image (`*.vdi`)
      file from the Virtual Media Manager repository
 
 - WARNING, DO NOT delete the file when prompted (see next slide)
 
-![](../../res/1/6.img-133.webp)
+![](../../images/1/6.img-133.webp)
 
 134. There are very few times where you will delete the image file from within
      the Oracle VM VirtualBox application environment
 
 - Select the option to (Keep) the image file
 
-![](../../res/1/6.img-134.webp)
+![](../../images/1/6.img-134.webp)
 
 135. The Virtual Media Manager now includes zero virtual disk image (`*.vdi`)
      files (a.k.a
 
 - hard disk image files)
 
-![](../../res/1/6.img-135.webp)
+![](../../images/1/6.img-135.webp)
 
 136. There are (2) CD/DVD installation media currently in the Virtual Media
      Manager
@@ -1180,14 +1180,14 @@ Complete!
 - Using similar steps as before (with the virtual hard disk (`*.vdi`) image)
   ...remove these (2) CD/DVD installation media from the Virtual Media Manager
 
-![](../../res/1/6.img-136.webp)
+![](../../images/1/6.img-136.webp)
 
 137. Now, the Virtual Media Manager repository includes zero CD/DVD image files,
      and, zero hard disk image files
 
 - Close the Virtual Media Manager interface
 
-![](../../res/1/6.img-137.webp)
+![](../../images/1/6.img-137.webp)
 
 138. With no attached virtual hard disk (`*.vdi`) file to the (Oracle Linux)
      virtual machine configuration profile, you can now complete the removal
@@ -1196,13 +1196,13 @@ Complete!
 - Right-click on the (Oracle Linux) virtual machine configuration profile, and
   select "Remove..." from the short-cut menu options
 
-![](../../res/1/6.img-138.webp)
+![](../../images/1/6.img-138.webp)
 
 139. Select the option to delete all remaining files associated with the (Oracle
      Linux) virtual machine profile, then close the Oracle VM VirtualBox
      application
 
-![](../../res/1/6.img-139.webp)
+![](../../images/1/6.img-139.webp)
 
 140. On the Host OS, make a copy of the virtual disk image (`*.vdi`) file that
      includes your Oracle Linux 8 Guest OS installation
@@ -1210,4 +1210,4 @@ Complete!
 - In the image above, (A) is the original file, and (B) is a backup copy of (A)
   ...where each file is located below a meaningful folder name
 
-![](../../res/1/6.img-140.webp)
+![](../../images/1/6.img-140.webp)
