--- a/pages/3/5.md
+++ b/pages/3/5.md
@@ -49,7 +49,7 @@
 - Here, we'll create a single folder off the root of the (C:) volume, called
   (`Data`), to contain all of your data
 
-![](../../res/3/5.img-1.webp)
+![](../../images/3/5.img-1.webp)
 
 2. Below the (`Data`) folder, we can start to create subfolders to organize our
    data
@@ -57,7 +57,7 @@
 - Change your file system context to (`C:\Data`) by double-clicking on the
   (`Data`) folder
 
-![](../../res/3/5.img-2.webp)
+![](../../images/3/5.img-2.webp)
 
 3. Assume we would like to keep all of our "Sales Department" related data in a
    folder structure, such that all users who work in our "Sales Department" can
@@ -68,7 +68,7 @@
 - Assume there will be many more folders and data files below this new folder,
   which are all related to the "Sales Department" of the company
 
-![](../../res/3/5.img-3.webp)
+![](../../images/3/5.img-3.webp)
 
 4. Currently, the contents of the (`Sales Department`) folder are only available
    to users who sign on to this node directly
@@ -78,11 +78,11 @@
 - Right-click on the (`Sales Department`) folder, and select the (Properties)
   option
 
-![](../../res/3/5.img-4.webp)
+![](../../images/3/5.img-4.webp)
 
 5. From the (Sharing) tab, click on the (Advanced Sharing, ) button
 
-![](../../res/3/5.img-5.webp)
+![](../../images/3/5.img-5.webp)
 
 6. Enable the (Share this folder) checkbox, to begin sharing the
    (`Sales Department`) folder over the network
@@ -91,12 +91,12 @@
 - Having `<space>` characters in a share name can be problematic, so let's
   shorten it a bit to just (`Sales`)
 
-![](../../res/3/5.img-6.webp)
+![](../../images/3/5.img-6.webp)
 
 7. The shortened share name now does not include any `<space>` characters, and
    is a bit easier to remember
 
-![](../../res/3/5.img-7.webp)
+![](../../images/3/5.img-7.webp)
 
 8. Click on the (Permissions) button
 
@@ -106,14 +106,14 @@
 - More granular permissions can then be controlled at an NTFS file system level
   if needed
 
-![](../../res/3/5.img-8.webp)
+![](../../images/3/5.img-8.webp)
 
 9. The (Everyone) security group now has (Full Control) share level permissions
 
 - Click on all the (Apply) and (OK) buttons to shave the folder sharing settings
 - Return to the (Properties - Sharing) tab for the (`Sales Department`) folder
 
-![](../../res/3/5.img-9.webp)
+![](../../images/3/5.img-9.webp)
 
 10. Verify the UNC (Universal Naming Convention) value for your newly shared
     folder
@@ -123,7 +123,7 @@
 - The UNC value is format is: `\\nodename\sharename`
 - Click on the (Close) button
 
-![](../../res/3/5.img-10.webp)
+![](../../images/3/5.img-10.webp)
 
 ## Microsoft Windows - Default NTFS Permissions
 
@@ -147,7 +147,7 @@
   permissions to write or modify files and folders, at an NTFS file system
   permissions level
 
-![](../../res/3/5.img-11.webp)
+![](../../images/3/5.img-11.webp)
 
 12. All newly created SAM user accounts which successfully authenticate to the
     node, by default, belong to another security group call (Authenticated
@@ -157,7 +157,7 @@
   appropriate permissions to write or modify files and folders, at an NTFS file
   system permissions level
 
-![](../../res/3/5.img-12.webp)
+![](../../images/3/5.img-12.webp)
 
 13. Viewing the effective permissions for a specific user account
     (`john.smith`), and for this specific folder (`Sales Department`), reveal
@@ -168,7 +168,7 @@
 - Therefore, no explicit NTFS file system permissions need to be added or
   modified
 
-![](../../res/3/5.img-13.webp)
+![](../../images/3/5.img-13.webp)
 
 ## Mapping to a Shared Folder
 
@@ -194,11 +194,11 @@
 - Access to the remote (e.g. C:\Data\Sales Department) folder is made possible
   using the network
 
-![](../../res/3/5.img-14.webp)
+![](../../images/3/5.img-14.webp)
 
 15. Click on the (Map network drive) option
 
-![](../../res/3/5.img-15.webp)
+![](../../images/3/5.img-15.webp)
 
 16. Any unused local drive letter can be used
 
@@ -206,7 +206,7 @@
 - If you want the drive mapping to be persistent each time the user signs on,
   then select this option
 
-![](../../res/3/5.img-16.webp)
+![](../../images/3/5.img-16.webp)
 
 17. If you wish to authenticate using a different set of security credentials
     (username + password), select this option
@@ -217,7 +217,7 @@
   this option does not need to be selected, as you current username and password
   values will be passed on to the remote node during the authentication process
 
-![](../../res/3/5.img-17.webp)
+![](../../images/3/5.img-17.webp)
 
 18. Type in the correct UNC value of the remote node's shared folder
 
@@ -225,12 +225,12 @@
   to complete the network drive mapping
 - Click on the (Finish) button
 
-![](../../res/3/5.img-18.webp)
+![](../../images/3/5.img-18.webp)
 
 19. A new (File Explorer) window will automatically open, once the network drive
     mapping process is successful
 
-![](../../res/3/5.img-19.webp)
+![](../../images/3/5.img-19.webp)
 
 20. Test your level of permissions
 
@@ -241,10 +241,10 @@
 - To complete your permissions test, find a small text-based file that is local
   to your node
 
-![](../../res/3/5.img-20.webp)
+![](../../images/3/5.img-20.webp)
 
 21. Copy the small text-based file located on your local node
-    ![](../../res/3/5.img-21.webp)
+    ![](../../images/3/5.img-21.webp)
 
 22. ...and paste it into the shared folder of the remote node
 
@@ -252,19 +252,23 @@
   user account is capable of creating new files in the remote node's
   (`C:\Data\Sales Department`) folder, via the share
 
-![](../../res/3/5.img-22.webp)
+![](../../images/3/5.img-22.webp)
 
 23. Use a text editor and modify the contents of the text-based file now located
-    on the remote node ![](../../res/3/5.img-23.webp)
+    on the remote node
+
+![](../../images/3/5.img-23.webp)
 
 24. If you are able to change the content within the file, and save the changes
     without receiving an error message, then you have confirmed that your user
     account is capable of modifying (and viewing) files in the remote node's
     (`C:\Data\Sales Department`) folder, via the share
 
-![](../../res/3/5.img-24.webp)
+![](../../images/3/5.img-24.webp)
 
-25. Rename the file located on the remote node ![](../../res/3/5.img-25.webp)
+25. Rename the file located on the remote node
+
+![](../../images/3/5.img-25.webp)
 
 26. If you did not receive an error message, then you have confirmed that your
     user account is capable of renaming files in the remote node's
@@ -276,7 +280,7 @@
   users will need to have these basic permissions to all shared data (the
   ability to read, create, write, modify, and delete)
 
-![](../../res/3/5.img-26.webp)
+![](../../images/3/5.img-26.webp)
 
 ## Monitoring and Managing Shared Folders
 
@@ -300,16 +304,16 @@
 - Change the share name
 - Change the permissions associated with a shared folder, etc
 
-![](../../res/3/5.img-27.webp)
+![](../../images/3/5.img-27.webp)
 
 28. Kill the connection for a user to a specific shared folder
 
-![](../../res/3/5.img-28.webp)
+![](../../images/3/5.img-28.webp)
 
 29. Kill the connection for a specific file that a user currently has in an
     opened state across the network via the shared folder
 
-![](../../res/3/5.img-29.webp)
+![](../../images/3/5.img-29.webp)
 
 ## Removing a Mapped Network Drive
 
@@ -318,12 +322,12 @@
 
 - Nothing destructive will happen to the remote node's shared folder
 
-![](../../res/3/5.img-30.webp)
+![](../../images/3/5.img-30.webp)
 
 31. The mapped network drive to the remote node's shared folder has now been
     disconnected from the local node
 
-![](../../res/3/5.img-31.webp)
+![](../../images/3/5.img-31.webp)
 
 ## Removing a Shared Folder
 
@@ -331,7 +335,7 @@
     folder) checkbox to stop sharing out the folder to other node users on the
     network
 
-![](../../res/3/5.img-32.webp)
+![](../../images/3/5.img-32.webp)
 
 ## Microsoft Windows Server - Default NTFS Permissions
 
@@ -359,9 +363,11 @@
 - Therefore, no explicit NTFS file system permissions need to be added or
   modified
 
-![](../../res/3/5.img-33.webp)
+![](../../images/3/5.img-33.webp)
 
-34. By analyzing the "Special Permissions" ![](../../res/3/5.img-34.webp)
+34. By analyzing the "Special Permissions"
+
+![](../../images/3/5.img-34.webp)
 
 35. ...we can see the (Create) permission is given in addition to other
     permissions
@@ -369,13 +375,13 @@
 - All permissions are then merged together to create what is called the
   "Effective Permissions" for a specific user account
 
-![](../../res/3/5.img-35.webp)
+![](../../images/3/5.img-35.webp)
 
 36. Viewing the effective permissions for a specific user account (john.smith),
     and for this specific folder (Human Resources), reveal the granular NTFS
     file system permissions
 
-![](../../res/3/5.img-36.webp)
+![](../../images/3/5.img-36.webp)
 
 ## Typical Problems
 
@@ -392,21 +398,21 @@
     node's SAM database, you will be prompted to enter a different set of
     security credentials
 
-![](../../res/3/5.img-37.webp)
+![](../../images/3/5.img-37.webp)
 
 38. When attempting to connect to a remote node's share, and your user account
     in the remote node's SAM database is in a disabled state, you will not be
     able to access the shared folder
 
-![](../../res/3/5.img-38.webp)
+![](../../images/3/5.img-38.webp)
 
 39. When attempting to connect to a remote node's share, and the share no longer
     exists, you will not be able to access the share
 
-![](../../res/3/5.img-39.webp)
+![](../../images/3/5.img-39.webp)
 
 40. When attempting to connect to a remote node's share, and you have misspelled
     any part of the UNC value, or have not used the correct UNC format
     (`\\nodename\sharename`), you will not be able to access the share
 
-![](../../res/3/5.img-40.webp)
+![](../../images/3/5.img-40.webp)
