--- a/pages/5/4.md
+++ b/pages/5/4.md
@@ -10,21 +10,21 @@
 1. Sign on to the node using the (`root`) administrative user account security
    credentials
 
-![](../../res/5/4.img-1.webp)
+![](../../images/5/4.img-1.webp)
 
 2. Username is (`root`), and typed in lower-case
 
-![](../../res/5/4.img-2.webp)
+![](../../images/5/4.img-2.webp)
 
 3. Password is (`Adm1np&ss`), and is case-sensitive
 
-![](../../res/5/4.img-3.webp)
+![](../../images/5/4.img-3.webp)
 
 4. Verify the existing hostname and IP address settings
 
 - Launch the (Terminal) application to get to a shell prompt
 
-![](../../res/5/4.img-4.webp)
+![](../../images/5/4.img-4.webp)
 
 5. The (`hostname`) command will reveal the current hostname value for this node
 
@@ -32,7 +32,7 @@
   node
 - Note that there are no IPv4 address details for this node's network adapter
 
-```
+```console
 [root@ol000123456a ~1# hostname
 01000123456a
 [root@ol000123456a ~]# ifconfig
@@ -62,26 +62,26 @@ virbr0: flags=4099<UP, BROADCAST, MULTICAST> mtu 1500
 6. Launch the (Settings) applet, to change both the hostname and IP address
    settings for this node
 
-![](../../res/5/4.img-6.webp)
+![](../../images/5/4.img-6.webp)
 
 7. The hostname value is changed using the (Details) settings applet option
 
-![](../../res/5/4.img-7.webp)
+![](../../images/5/4.img-7.webp)
 
 8. The current hostname value is displayed
 
-![](../../res/5/4.img-8.webp)
+![](../../images/5/4.img-8.webp)
 
 9. Change the hostname value to a unique value on your network, and close the
    applet
 
 - Changes will be immediate
 
-![](../../res/5/4.img-9.webp)
+![](../../images/5/4.img-9.webp)
 
 10. Verify the hostname value has changed for the node
 
-```
+```console
 [root@ol000123456b ~]# hostname
 01000123456b
 [root@ol000123456b ~1]#
@@ -89,18 +89,18 @@ virbr0: flags=4099<UP, BROADCAST, MULTICAST> mtu 1500
 
 11. IP address settings are changed using the (Network) settings applet option
 
-![](../../res/5/4.img-11.webp)
+![](../../images/5/4.img-11.webp)
 
 12. Click on the gear icon, associated with the wired network adapter, to change
     the network adapter settings
 
-![](../../res/5/4.img-12.webp)
+![](../../images/5/4.img-12.webp)
 
 13. From the IPv4 settings category, use the radio button selection icon to
     change from a dynamic (automatic) IP configuration, to a static (manual) IP
     configuration
 
-![](../../res/5/4.img-13.webp)
+![](../../images/5/4.img-13.webp)
 
 14. A (manual) IP configuration will then allow you to enter in static IP
     address and corresponding subnet mask values
@@ -108,19 +108,19 @@ virbr0: flags=4099<UP, BROADCAST, MULTICAST> mtu 1500
 - On some Linux distributions, a gateway address is mandatory, even though there
   might not be a router located on the network
 
-![](../../res/5/4.img-14.webp)
+![](../../images/5/4.img-14.webp)
 
 15. Type in the IP address setting values, and click on the (Apply) button to
     save the configuration changes
 
-![](../../res/5/4.img-15.webp)
+![](../../images/5/4.img-15.webp)
 
 16. Verify the IP address settings have been updated for the network adapter
 
 - Here we see there is now IPv4 address information, where before, this network
   adapter did not have any
 
-```
+```console
 [root@ol000123456b ~]# ifconfig
 enp0s3: flags=4163<UP, BROADCAST, RUNNING, MULTICAST> mtu 1500
         inet 10.1.1.20 netmask 255.255.255.0 broadcast 10.1.1.255
@@ -154,7 +154,7 @@ virbr0: flags=4099<UP, BROADCAST, MULTICAST> mtu 1500
 - This key combination will stop the (`ping`) testing, and return you to the
   shell prompt
 
-```
+```console
 [root@ol000123456b ~]# ping 10.1.1.10
 PING 10.1.1.10 (10.1.1.10) 56(84) bytes of data.
 64 bytes from 10.1.1.10: imp seq=1 ttl=64 time=0.625 ms
