--- a/pages/8/3.md
+++ b/pages/8/3.md
@@ -18,27 +18,24 @@
 - The Guest OS should be capable of resolving both the "server" and the "client"
   nodes in your network environment using hostname values
 
-![](../../res/8/3.img-1.webp)
+![](../../images/8/3.img-1.webp)
 
 2. You should have (2) similar entries in the local resolution file on the
    Microsoft Windows Guest OS
 
 - Use your personal 9-digit number in place of the sample ones in this image
 
-```
+```console
 # Copyright (c) 1993-2009 Microsoft Corp.
 # This is a sample HOSTS file used by Microsoft TCP/IP for Windows.
-#
+
 # This file contains the mappings of IP addresses to host names
-- Each
-# entry should be kept on an individual line
-- The IP address should
-# be placed in the first column followed by the corresponding host name.
-# The IP address and the host name should be separated by at least one
-# space.
+# Each entry should be kept on an individual line
+# The IP address should be placed in the first column followed by the corresponding host name.
+# The IP address and the host name should be separated by at least one space.
 # Additionally, comments (such as these) may be inserted on individual
 # lines or following the machine name denoted by a '#' symbol.
-#
+
 # For example:
 #
 #   102.54.94.97    rhino.acme.com          # source server
@@ -57,11 +54,13 @@
 
 - When you attempt to save the modifications to this file, the Notepad++ editor
   will ask if you want to restart in administrator mode
-- Select "Yes" ![](../../res/8/3.img-3.webp)
+- Select "Yes"
+
+![](../../images/8/3.img-3.webp)
 
 4. Select "Yes" to the (UAC: User Account Control) message
 
-![](../../res/8/3.img-4.webp)
+![](../../images/8/3.img-4.webp)
 
 5. ...then re-save the modifications to this file
 
@@ -73,24 +72,24 @@
 - Double-click on it to begin the installation of the MSSQL native GUI user
   interface
 
-![](../../res/8/3.img-6.webp)
+![](../../images/8/3.img-6.webp)
 
 7. Select "Yes" to the (UAC: User Account Control) message
 
-![](../../res/8/3.img-7.webp)
+![](../../images/8/3.img-7.webp)
 
 8. Click on the "Install" button, and let the software product install
 
-![](../../res/8/3.img-8.webp)
+![](../../images/8/3.img-8.webp)
 
 9. Let the installation complete
 
-![](../../res/8/3.img-9.webp)
+![](../../images/8/3.img-9.webp)
 
 10. Once the installation has successfully completed, click on the "Close"
     button
 
-![](../../res/8/3.img-10.webp)
+![](../../images/8/3.img-10.webp)
 
 ## Installing the MSSQL Native CLI User Interface (sqlcmd)
 
@@ -105,29 +104,29 @@
 - Double-click on it to begin the installation of the MSSQL native CLI user
   interface
 
-![](../../res/8/3.img-12.webp)
+![](../../images/8/3.img-12.webp)
 
 13. Click on the "Next" button
 
-![](../../res/8/3.img-13.webp)
+![](../../images/8/3.img-13.webp)
 
 14. Accept the license agreement
 
-![](../../res/8/3.img-14.webp)
+![](../../images/8/3.img-14.webp)
 
 15. Click on the "Install" button to begin the software product installation
     process
 
-![](../../res/8/3.img-15.webp)
+![](../../images/8/3.img-15.webp)
 
 16. Select "Yes" to the (UAC: User Account Control) message
 
-![](../../res/8/3.img-16.webp)
+![](../../images/8/3.img-16.webp)
 
 17. Once the installation has successfully completed, click on the "Finish"
     button
 
-![](../../res/8/3.img-17.webp)
+![](../../images/8/3.img-17.webp)
 
 18. Re-launch a Windows PowerShell session, and verify that the (sqlcmd) CLI
     utility is accessible from the command line environment
@@ -140,19 +139,19 @@
 19. Locate and launch the Microsoft SQL Server Management Studio (SSMS)
     application
 
-![](../../res/8/3.img-19.webp)
+![](../../images/8/3.img-19.webp)
 
 20. Note the difference from that which you encountered earlier on the Microsoft
     Windows Server Guest OS
 
 - No MSSQL database engine is selected by default
 
-![](../../res/8/3.img-20.webp)
+![](../../images/8/3.img-20.webp)
 
 21. From the "Server Name:" drop-down list, click on the option to browse for
     MSSQL database engines on the network
 
-![](../../res/8/3.img-21.webp)
+![](../../images/8/3.img-21.webp)
 
 22. The (Local Servers) tab will display all MSSQL database engines which are in
     a running state on the local node (the Microsoft Windows Guest OS)
@@ -160,7 +159,7 @@
 - The only MSSQL database engine running in your network environment
   (currently), is located on the Microsoft Windows Server Guest OS
 
-![](../../res/8/3.img-22.webp)
+![](../../images/8/3.img-22.webp)
 
 23. Click on the (Network Servers) tab to search for MSSQL database engines
     which are running on remote network nodes
@@ -168,12 +167,12 @@
 - Expand the (Database Engines) structure to see which nodes they are running
   on, and what each database engine's instance name is
 
-![](../../res/8/3.img-23.webp)
+![](../../images/8/3.img-23.webp)
 
 24. Select the MSSQL database engine in your network environment, and click on
     the "OK" button
 
-![](../../res/8/3.img-24.webp)
+![](../../images/8/3.img-24.webp)
 
 25. A connection to the MSSQL database engine cannot be made using this SAM
     database user account
@@ -181,29 +180,29 @@
 - This user account is currently not permitted to connect to the MSSQL database
   engine, as it is not configured to do so
 
-![](../../res/8/3.img-25.webp)
+![](../../images/8/3.img-25.webp)
 
 26. You can however, connect to the MSSQL database engine using the built-in
     (sa) user account during the authentication process
 
 - It's password is (Adm1np&ss)
 
-![](../../res/8/3.img-26.webp)
+![](../../images/8/3.img-26.webp)
 
 ## Customizing the (SSMS) User Interface
 
 27. Once authenticated, verify your connection details
 
-![](../../res/8/3.img-27.webp)
+![](../../images/8/3.img-27.webp)
 
 28. Configure the (SSMS) user interface to make use of the (3) standard
     interface panes
 
-![](../../res/8/3.img-28.webp)
+![](../../images/8/3.img-28.webp)
 
 29. Verify that the system databases are visible to the (sa) user account
 
-![](../../res/8/3.img-29.webp)
+![](../../images/8/3.img-29.webp)
 
 30. As it is with most Microsoft GUI application user interfaces, periodically a
     manual "refresh" needs to be performed in order to view any newly created
@@ -211,7 +210,7 @@
 
 - Here, a refresh of the "User Databases" node is being performed
 
-![](../../res/8/3.img-30.webp)
+![](../../images/8/3.img-30.webp)
 
 31. Here, a manual refresh of the database engine's (Login) objects' node is
     being performed
@@ -220,7 +219,7 @@
   "refreshed" from time to time, if you wish to see item changes below them
 - There is no global refresh for the (SSMS) user interface
 
-![](../../res/8/3.img-31.webp)
+![](../../images/8/3.img-31.webp)
 
 32. This will not work as one would expect
 
@@ -228,14 +227,14 @@
   MSSQL database engine level (node), will not refresh the node information
   below it (within all the child node containers)
 
-![](../../res/8/3.img-32.webp)
+![](../../images/8/3.img-32.webp)
 
 ## Connecting using the (sqlcmd) User Interface
 
 33. This is an example of a connection to the database engine instance using
     internal SQL Authentication, using the (sqlcmd) CLI utility
 
-```
+```console
 PS C:\Users\Administrator> sqlcmd -S w000123456a\dbe000123456a -U sa
 Password:
 ```
